Улучшена семантика. Фиксы в тексте

--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru" class="dark">
 	<head>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Страница не найдена — 404</title>
 		<meta
@@ -51,7 +51,7 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАВИГАЦИЯ</span>
 						<h2 class="section__title">Куда дальше?</h2>
 					</div>
