--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
 					<a href="index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="galaxies/">ГАЛАКТИКИ</a>
@@ -257,24 +257,19 @@
 			<section class="hero" aria-label="О проекте">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						О ПРОЕКТЕ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						КОСМИЧЕСКАЯ ЭНЦИКЛОПЕДИЯ
-					</p>
+					<h1 class="hero__title">О ПРОЕКТЕ</h1>
+					<p class="hero__subtitle">КОСМИЧЕСКАЯ ЭНЦИКЛОПЕДИЯ</p>
 				</div>
 			</section>
 
 			<!-- О проекте -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ВВЕДЕНИЕ</span>
 						<h2 class="section__title">Добро пожаловать в проект COSMOS</h2>
 					</div>
 					<article
-						class="animate-fade-in"
 						style="
 							animation-delay: 200ms;
 							color: var(--fg-dim);
@@ -316,12 +311,12 @@
 			<!-- Особенности проекта -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОСОБЕННОСТИ</span>
 						<h2 class="section__title">Что делает нас уникальными</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Научная точность</h3>
 							<p class="text-card__desc">
 								Вся информация основана на актуальных научных данных и регулярно
@@ -329,14 +324,14 @@
 								космологии.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Интуитивный интерфейс</h3>
 							<p class="text-card__desc">
 								Плавные анимации, продуманная навигация и адаптивный дизайн
 								обеспечивают комфортное изучение материалов на любом устройстве.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Визуальная эстетика</h3>
 							<p class="text-card__desc">
 								Минималистичный дизайн в космической тематике создаёт атмосферу
@@ -350,12 +345,11 @@
 			<!-- Наша миссия -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МИССИЯ</span>
 						<h2 class="section__title">Наша миссия</h2>
 					</div>
 					<article
-						class="animate-fade-in"
 						style="
 							animation-delay: 200ms;
 							color: var(--fg-dim);
@@ -393,12 +387,12 @@
 			<!-- Технологии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ТЕХНОЛОГИИ</span>
 						<h2 class="section__title">Технологический стек</h2>
 					</div>
 					<div class="compare">
-						<article class="compare__col animate-fade-up" style="animation-delay: 0ms">
+						<article class="compare__col">
 							<header class="compare__head">Frontend</header>
 							<ul class="compare__list">
 								<li>HTML5 семантическая разметка</li>
@@ -408,10 +402,7 @@
 								<li>Оптимизация производительности</li>
 							</ul>
 						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 150ms"
-						>
+						<article class="compare__col">
 							<header class="compare__head">Дизайн</header>
 							<ul class="compare__list">
 								<li>Минималистичная эстетика</li>
@@ -421,10 +412,7 @@
 								<li>Интерактивные элементы</li>
 							</ul>
 						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 300ms"
-						>
+						<article class="compare__col">
 							<header class="compare__head">SEO</header>
 							<ul class="compare__list">
 								<li>Семантическое ядро</li>
@@ -441,20 +429,20 @@
 			<!-- Статистика проекта -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЦИФРЫ</span>
 						<h2 class="section__title">Проект в цифрах</h2>
 					</div>
 					<div class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+						<div class="stat">
 							<div class="stat__value">5</div>
 							<div class="stat__label">ОСНОВНЫХ РАЗДЕЛОВ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">30+</div>
 							<div class="stat__label">СТАТЕЙ И ОБЗОРОВ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">2025</div>
 							<div class="stat__label">ГОД ЗАПУСКА ПРОЕКТА</div>
 						</div>
@@ -465,12 +453,11 @@
 			<!-- Планы развития -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">РОАДМАП</span>
 						<h2 class="section__title">Планы развития</h2>
 					</div>
 					<article
-						class="animate-fade-in"
 						style="
 							animation-delay: 200ms;
 							color: var(--fg-dim);
@@ -500,12 +487,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Кто создал этот проект?</summary>
 							<p>
 								Космическая энциклопедия создана командой в лице студента БГТУ Пупко
@@ -513,7 +500,7 @@
 								аудитории.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Откуда берётся информация?</summary>
 							<p>
 								Вся информация основана на научных данных из авторитетных
@@ -521,7 +508,7 @@
 								астрономических организаций.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+						<details class="faq__item">
 							<summary>Могу ли я использовать материалы проекта?</summary>
 							<p>
 								Материалы проекта предназначены для образовательных целей. При
@@ -536,7 +523,6 @@
 			<section class="section">
 				<div class="container">
 					<aside
-						class="animate-fade-in"
 						style="
 							animation-delay: 200ms;
 							max-width: 720px;
