--- a/blackholes/event-horizon.html
+++ b/blackholes/event-horizon.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Горизонт событий: точка невозврата | Чёрные дыры</title>
 		<meta
@@ -150,7 +150,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -185,29 +185,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #8a2be2"
-					>
-						ГОРИЗОНТ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ТОЧКА НЕВОЗВРАТА
-					</p>
+					<h1 class="hero__title">ГОРИЗОНТ</h1>
+					<p class="hero__subtitle">ТОЧКА НЕВОЗВРАТА</p>
 				</div>
 			</section>
 
 			<!-- Теория -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ГРАВИТАЦИЯ</span>
 						<h2 class="section__title">Граница реальности</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Горизонт событий</strong> — это воображаемая сферическая
 							поверхность вокруг сингулярности чёрной дыры. В этой точке вторая
@@ -226,26 +216,26 @@
 			<!-- Радиус Шварцшильда -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФИЗИКА</span>
 						<h2 class="section__title">Радиус Шварцшильда</h2>
 					</div>
 					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Для Земли</h3>
 							<p class="text-card__desc">
 								Если сжать всю массу Земли в чёрную дыру, её горизонт событий был бы
 								размером с шарик для пинг-понга (~9 мм).
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Для Солнца</h3>
 							<p class="text-card__desc">
 								Солнце стало бы чёрной дырой с радиусом всего около 3 километров,
 								сохранив при этом свою гравитацию для планет.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">M87*</h3>
 							<p class="text-card__desc">
 								Сверхмассивная чёрная дыра в галактике M87 имеет радиус горизонта
@@ -258,14 +248,11 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПРИЛИВНЫЕ СИЛЫ</span>
 						<h2 class="section__title">Разрыв на части</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							При приближении к горизонту событий гравитационный градиент становится
 							настолько сильным, что возникает <strong>спагеттификация</strong> —
@@ -290,14 +277,11 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ВРЕМЯ</span>
 						<h2 class="section__title">Гравитационное замедление</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Согласно общей теории относительности, время замедляется в сильном
 							гравитационном поле. Для наблюдателя на безопасном расстоянии часы
@@ -322,14 +306,11 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ТЕМПЕРАТУРА</span>
 						<h2 class="section__title">Излучение Хокинга</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В 1974 году Стивен Хокинг показал, что горизонты событий не полностью
 							чёрные. Из-за квантовых эффектов они испускают слабое тепловое излучение
@@ -353,14 +334,11 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАБЛЮДЕНИЯ</span>
 						<h2 class="section__title">Как увидеть невидимое</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Прямое наблюдение горизонта событий стало возможным только в 2019 году с
 							помощью телескопа Event Horizon Telescope. Учёные получили первое
@@ -385,12 +363,12 @@
 
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли вырваться с горизонта событий?</summary>
 							<p>
 								Нет, горизонт событий — это точка невозврата. Даже свет не может
@@ -398,7 +376,7 @@
 								падает в сингулярность.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что происходит с информацией внутри чёрной дыры?</summary>
 							<p>
 								Это нерешённая проблема — "парадокс информации". Квантовая механика
@@ -407,7 +385,7 @@
 								нести информацию, но механизм не до конца понятен.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Почему горизонт событий называется "горизонтом"?</summary>
 							<p>
 								По аналогии с морским горизонтом — это граница того, что мы можем
@@ -416,7 +394,7 @@
 								наблюдателя.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+						<details class="faq__item">
 							<summary>Есть ли у вращающихся чёрных дыр особые горизонты?</summary>
 							<p>
 								Да, у вращающихся чёрных дыр (Керра) есть два горизонта: внешний и
@@ -433,7 +411,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
