--- a/blackholes/index.html
+++ b/blackholes/index.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Чёрные дыры: горизонт событий, сингулярность | Космос</title>
 		<meta
@@ -144,7 +144,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -168,26 +168,19 @@
 			<section class="hero" aria-label="Чёрные дыры">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						ЧЁРНЫЕ ДЫРЫ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ГРАНИЦА ИЗВЕСТНОГО
-					</p>
+					<h1 class="hero__title">ЧЁРНЫЕ ДЫРЫ</h1>
+					<p class="hero__subtitle">ГРАНИЦА ИЗВЕСТНОГО</p>
 				</div>
 			</section>
 
 			<!-- Определение -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФЕНОМЕН</span>
 						<h2 class="section__title">Что такое чёрная дыра?</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Чёрная дыра</strong> — это область пространства-времени с
 							настолько сильным гравитационным притяжением, что покинуть её не могут
@@ -210,12 +203,12 @@
 			<!-- Типы черных дыр -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
 						<h2 class="section__title">Типы чёрных дыр</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
+					<div class="compare">
+						<div class="compare__col">
 							<div class="compare__head">Звёздной массы</div>
 							<ul class="compare__list">
 								<li>Образуются при коллапсе массивных звёзд</li>
@@ -224,7 +217,7 @@
 								<li>Часто в двойных системах</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
+						<div class="compare__col">
 							<div class="compare__head">Сверхмассивные</div>
 							<ul class="compare__list">
 								<li>Находятся в центрах галактик</li>
@@ -233,7 +226,7 @@
 								<li>Стрелец A* (Млечный Путь)</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 300ms">
+						<div class="compare__col">
 							<div class="compare__head">Промежуточной массы</div>
 							<ul class="compare__list">
 								<li>Редкий и малоизученный класс</li>
@@ -242,28 +235,28 @@
 								<li>Переходное звено</li>
 							</ul>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Статистика -->
 			<section class="section">
 				<div class="container">
-					<article class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+					<div class="stats">
+						<div class="stat">
 							<div class="stat__value">∞</div>
 							<div class="stat__label">ПЛОТНОСТЬ В ЦЕНТРЕ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">0</div>
 							<div class="stat__label">ОБЪЁМ СИНГУЛЯРНОСТИ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">299 792</div>
 							<div class="stat__label">КМ/С (СКОРОСТЬ СВЕТА)</div>
 						</div>
-					</article>
-					<article class="info-band animate-fade-in" style="animation-delay: 400ms">
+					</div>
+					<div class="info-band">
 						<div class="info-band__inner">
 							<span class="info-band__dot"></span>
 							<span class="info-band__text"
@@ -286,19 +279,19 @@
 							</span>
 							<span class="info-band__dot"></span>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Эффекты -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФИЗИКА</span>
 						<h2 class="section__title">Эффекты вблизи чёрной дыры</h2>
 					</div>
 					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Замедление времени</h3>
 							<p class="text-card__desc">
 								Гравитация настолько сильна, что искривляет само время. Для
@@ -306,7 +299,7 @@
 								наблюдателя он «застывает» на горизонте событий.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Спагеттификация</h3>
 							<p class="text-card__desc">
 								При приближении к сингулярности приливные силы становятся настолько
@@ -314,7 +307,7 @@
 								струну, напоминающую спагетти.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Аккреционный диск</h3>
 							<p class="text-card__desc">
 								Материя, падающая на чёрную дыру, закручивается в диск, разогреваясь
@@ -329,14 +322,11 @@
 			<!-- Факты о чёрных дырах -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФАКТЫ</span>
 						<h2 class="section__title">Числа и масштабы гравитации</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Радиус <strong>шварцшильдовского горизонта</strong> (границы чёрной
 							дыры) для объекта солнечной массы составляет всего около
@@ -358,12 +348,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы о чёрных дырах</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли увидеть чёрную дыру?</summary>
 							<p>
 								Саму дыру увидеть нельзя, так как она не испускает свет. Однако мы
@@ -371,7 +361,7 @@
 								диска, как это сделал телескоп горизонта событий (EHT) в 2019 году.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что будет, если Солнце станет чёрной дырой?</summary>
 							<p>
 								Солнце не имеет достаточной массы для этого. Но если бы оно
@@ -379,7 +369,7 @@
 								вращаться по той же орбите, просто стало бы очень холодно и темно.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Куда ведёт чёрная дыра?</summary>
 							<p>
 								Существуют гипотезы о кротовых норах или мостах Эйнштейна-Розена,
@@ -395,7 +385,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
