--- a/blackholes/supermassive.html
+++ b/blackholes/supermassive.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Сверхмассивные чёрные дыры: сердца галактик | Чёрные дыры</title>
 		<meta
@@ -154,7 +154,7 @@
 			<div class="container">
 				<div class="header__inner">
 					<a href="../index.html"><div class="logo">COSMOS</div></a>
-					<nav class="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -166,13 +166,13 @@
 		</header>
 
 		<main>
-			<nav class="breadcrumbs h-breadcrumb">
+			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link" href="../index.html">Главная</a>
 				<a class="breadcrumbs__link" href="../blackholes/">Чёрные дыры</a>
 				<span class="breadcrumbs__current">Сверхмассивные</span>
 			</nav>
 
-			<section class="hero">
+			<section class="hero" aria-label="Сверхмассивные чёрные дыры">
 				<div
 					class="hero__bg"
 					style="
@@ -184,8 +184,8 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="color: #8e44ad">ГИГАНТЫ</h1>
-					<p class="hero__subtitle animate-fade-in">СВЕРХМАССИВНЫЕ ЧЁРНЫЕ ДЫРЫ</p>
+					<h1 class="hero__title" style="color: #8e44ad">ГИГАНТЫ</h1>
+					<p class="hero__subtitle">СВЕРХМАССИВНЫЕ ЧЁРНЫЕ ДЫРЫ</p>
 				</div>
 			</section>
 
@@ -195,7 +195,7 @@
 						<span class="section__tag">МАСШТАБ</span>
 						<h2 class="section__title">Миллиарды Солнц</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							В центре почти каждой крупной галактики находится
 							<strong>сверхмассивная чёрная дыра</strong>. Их масса варьируется от
@@ -216,7 +216,7 @@
 						<span class="section__tag">АКТИВНОСТЬ</span>
 						<h2 class="section__title">Квазары</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Когда сверхмассивная дыра активно поглощает газ и пыль, она превращается
 							в <strong>квазар</strong> — самый яркий объект во Вселенной.
@@ -237,7 +237,7 @@
 						<span class="section__tag">ИСТОРИЯ</span>
 						<h2 class="section__title">От гипотезы к открытию</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Идея о существовании массивных объектов в центрах галактик впервые
 							появилась в 1960-х годах. Астрономы заметили, что некоторые галактики
@@ -268,7 +268,7 @@
 						<span class="section__tag">ФОРМИРОВАНИЕ</span>
 						<h2 class="section__title">Рождение гигантов</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Существует две основные теории формирования сверхмассивных чёрных дыр.
 							Первая — "снизу-вверх": массивные звёзды первого поколения (популяция
@@ -298,7 +298,7 @@
 						<span class="section__tag">ВЛИЯНИЕ</span>
 						<h2 class="section__title">Архитекторы галактик</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Сверхмассивные чёрные дыры играют ключевую роль в эволюции галактик.
 							Процесс "обратной связи" регулирует звездообразование: активные
@@ -327,7 +327,7 @@
 						<span class="section__tag">ИЗВЕСТНЫЕ ПРИМЕРЫ</span>
 						<h2 class="section__title">Гиганты Вселенной</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							<strong>Стрелец A*</strong> — чёрная дыра в центре Млечного Пути, массой
 							4 миллиона солнечных. Относительно спокойная, но периодически поглощает
@@ -355,7 +355,7 @@
 						<span class="section__tag">МЕТОДЫ ОБНАРУЖЕНИЯ</span>
 						<h2 class="section__title">Как видят невидимое</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							<strong>Доплеровская спектроскопия</strong> измеряет скорости звёзд и
 							газа вокруг центра галактики. По кривым вращения определяется масса
@@ -385,7 +385,7 @@
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Могут ли сверхмассивные чёрные дыры сливаться?</summary>
 							<p>
 								Да, при слиянии галактик их центральные чёрные дыры постепенно
@@ -394,7 +394,7 @@
 								в нескольких случаях.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что будет, если упасть в сверхмассивную чёрную дыру?</summary>
 							<p>
 								Из-за огромного размера приливные силы на горизонте событий
@@ -403,7 +403,7 @@
 								как вы замедляетесь и исчезаете.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Существует ли предел массы сверхмассивных чёрных дыр?</summary>
 							<p>
 								Теоретический предел около 50 миллиардов солнечных масс. При большей
@@ -411,7 +411,7 @@
 								чёрную дыру. TON 618 близок к этому пределу.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+						<details class="faq__item">
 							<summary>Почему в Млечном Пути чёрная дыра такая маленькая?</summary>
 							<p>
 								Стрелец A* неактивен — мало газа для аккреции. В прошлом он мог быть
