--- a/exploration/apollo-11.html
+++ b/exploration/apollo-11.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Apollo 11: первые шаги на Луне | Космонавтика</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -182,24 +182,20 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						APOLLO 11
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ПЕРВЫЕ ШАГИ НА ЛУНЕ
-					</p>
+					<h1 class="hero__title">APOLLO 11</h1>
+					<p class="hero__subtitle">ПЕРВЫЕ ШАГИ НА ЛУНЕ</p>
 				</div>
 			</section>
 
 			<!-- Экипаж -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КОМАНДА</span>
 						<h2 class="section__title">Легендарный экипаж</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Нил Армстронг</h3>
 							<p class="text-card__desc">
 								Командир миссии. Опытный летчик-испытатель. Именно ему выпала честь
@@ -207,14 +203,14 @@
 								фразу.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Базз Олдрин</h3>
 							<p class="text-card__desc">
 								Пилот лунного модуля "Орёл". Второй человек на Луне. Специалист по
 								орбитальной стыковке, доктор наук MIT.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Майкл Коллинз</h3>
 							<p class="text-card__desc">
 								Пилот командного модуля "Колумбия". Ожидал коллег на орбите Луны в
@@ -228,14 +224,11 @@
 			<!-- Техника -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ТЕХНОЛОГИИ</span>
 						<h2 class="section__title">Ракета Saturn V</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Самая мощная ракета, когда-либо успешно летавшая в космос. Высота — 110
 							метров (выше статуи Свободы), масса — почти 3000 тонн. Пять двигателей
@@ -253,15 +246,12 @@
 			<!-- Хронология -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ХРОНОЛОГИЯ</span>
 						<h2 class="section__title">8 дней, изменивших мир</h2>
 					</div>
 					<div class="timeline">
-						<article
-							class="timeline__item animate-fade-up"
-							style="animation-delay: 0ms"
-						>
+						<article class="timeline__item">
 							<span class="timeline__year">16 июля</span>
 							<div class="timeline__content">
 								<strong>Старт</strong><br />
@@ -269,10 +259,7 @@
 								прямом эфире.
 							</div>
 						</article>
-						<article
-							class="timeline__item animate-fade-up"
-							style="animation-delay: 100ms"
-						>
+						<article class="timeline__item">
 							<span class="timeline__year">19 июля</span>
 							<div class="timeline__content">
 								<strong>Орбита Луны</strong><br />
@@ -280,10 +267,7 @@
 								Луны.
 							</div>
 						</article>
-						<article
-							class="timeline__item animate-fade-up"
-							style="animation-delay: 200ms"
-						>
+						<article class="timeline__item">
 							<span class="timeline__year">20 июля</span>
 							<div class="timeline__content">
 								<strong>Посадка</strong><br />
@@ -292,10 +276,7 @@
 								топлива — на 25 секунд.
 							</div>
 						</article>
-						<article
-							class="timeline__item animate-fade-up"
-							style="animation-delay: 300ms"
-						>
+						<article class="timeline__item">
 							<span class="timeline__year">21 июля</span>
 							<div class="timeline__content">
 								<strong>Выход</strong><br />
@@ -303,10 +284,7 @@
 								36 минут, из них 2.5 часа вне корабля.
 							</div>
 						</article>
-						<article
-							class="timeline__item animate-fade-up"
-							style="animation-delay: 400ms"
-						>
+						<article class="timeline__item">
 							<span class="timeline__year">24 июля</span>
 							<div class="timeline__content">
 								<strong>Возвращение</strong><br />
@@ -320,14 +298,11 @@
 			<!-- Наука -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАУКА</span>
 						<h2 class="section__title">Эксперименты на Луне</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Астронавты установили комплект научных приборов EASEP, включающий
 							сейсмометр (для изучения лунотрясений) и лазерный уголковый отражатель.
@@ -349,12 +324,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Почему флаг "развевался" в вакууме?</summary>
 							<p>
 								Флаг имел Г-образный каркас (горизонтальную перекладину), чтобы
@@ -363,7 +338,7 @@
 								отсутствия сопротивления воздуха.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Видны ли следы астронавтов сейчас?</summary>
 							<p>
 								Да, современные орбитальные аппараты (LRO) сфотографировали места
@@ -372,7 +347,7 @@
 								лет.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Почему не видно звезд на фото?</summary>
 							<p>
 								Из-за ярко освещенной Солнцем поверхности Луны. Камеры были
@@ -387,14 +362,11 @@
 			<!-- Наследие -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАСЛЕДИЕ</span>
 						<h2 class="section__title">Влияние на человечество</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Программа «Аполлон» не только открыла людям Луну, но и стала мощным
 							драйвером технологического прогресса. Разработки NASA того времени
@@ -415,7 +387,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
