--- a/exploration/hubble.html
+++ b/exploration/hubble.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Телескоп Хаббл: 30 лет открытий | Космонавтика</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -183,29 +183,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #95a5a6"
-					>
-						ХАББЛ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ОКНО ВО ВСЕЛЕННУЮ
-					</p>
+					<h1 class="hero__title">ХАББЛ</h1>
+					<p class="hero__subtitle">ОКНО ВО ВСЕЛЕННУЮ</p>
 				</div>
 			</section>
 
 			<!-- История -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИСТОРИЯ</span>
 						<h2 class="section__title">Трудный путь к звёздам</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Космический телескоп <strong>Hubble</strong> был выведен на орбиту
 							шаттлом Discovery 24 апреля 1990 года. Это был триумф науки, который
@@ -229,12 +219,12 @@
 			<!-- Deep Field -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОТКРЫТИЕ</span>
 						<h2 class="section__title">Hubble Deep Field</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Смелый эксперимент</h3>
 							<p class="text-card__desc">
 								В 1995 году директор института Роберт Уильямс решил направить
@@ -242,14 +232,14 @@
 								размером с песчинку.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Результат</h3>
 							<p class="text-card__desc">
 								После 100 часов экспозиции на снимке проявились 3000 галактик. Это
 								доказало, что Вселенная однородна и наполнена миллиардами миров.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Ultra Deep Field</h3>
 							<p class="text-card__desc">
 								Позже камера ACS заглянула еще глубже, увидев галактики,
@@ -264,14 +254,11 @@
 			<!-- Достижения -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАУКА</span>
 						<h2 class="section__title">Главные достижения</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<ul class="list" style="margin-left: 20px; list-style-type: disc">
 							<li style="margin-bottom: 10px">
 								<strong>Возраст Вселенной:</strong> Уточнил постоянную Хаббла, сузив
@@ -298,18 +285,19 @@
 			<!-- Будущее -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПЕРСПЕКТИВЫ</span>
 						<h2 class="section__title">Закат эпохи</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Хаббл работает уже более 30 лет, намного превысив расчетный срок службы.
-							Его орбита постепенно снижается из-за трения об атмосферу. Без
-							двигателей он не может её поднять.
+						</p>
+						<p>
+							Хаббл продолжит работать как минимум до 2030 года, а его преемник —
+							телескоп Джеймса Уэбба — уже совершает революционные открытия; подробнее
+							о современных миссиях — в разделе
+							<a class="text-link" href="jwst.html">телескоп Джеймса Уэбба</a>.
 						</p>
 						<p>
 							Предполагается, что телескоп войдет в плотные слои атмосферы и сгорит в
@@ -325,12 +313,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Почему Хаббл находится в космосе?</summary>
 							<p>
 								Атмосфера Земли искажает свет звезд (поэтому они мерцают) и
@@ -338,7 +326,7 @@
 								Вселенную кристально четко и во всех диапазонах.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Снимает ли Хаббл в цвете?</summary>
 							<p>
 								Камеры Хаббла снимают в черно-белом формате через разные фильтры
@@ -347,7 +335,7 @@
 								обработке.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Может ли Хаббл сфотографировать луноход Apollo?</summary>
 							<p>
 								Нет. Разрешающая способность Хаббла — около 50 метров на поверхности
@@ -363,7 +351,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
