--- a/exploration/iss.html
+++ b/exploration/iss.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>МКС: дом на орбите | Исследование космоса</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -183,29 +183,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #3498db"
-					>
-						МКС
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ОРБИТАЛЬНЫЙ ДОМ
-					</p>
+					<h1 class="hero__title">МКС</h1>
+					<p class="hero__subtitle">ОРБИТАЛЬНЫЙ ДОМ</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПРОЕКТ</span>
 						<h2 class="section__title">Сотрудничество наций</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Международная космическая станция</strong> — это самый дорогой и
 							сложный объект, созданный человечеством. В проекте участвуют 14 стран:
@@ -229,19 +219,19 @@
 			<!-- Жизнь на орбите -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">БЫТ</span>
 						<h2 class="section__title">Жизнь в невесомости</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Распорядок дня</h3>
 							<p class="text-card__desc">
 								День космонавтов расписан по минутам: научные эксперименты,
 								техобслуживание станции, связь с Землей. Работают по Гринвичу (UTC).
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Спорт</h3>
 							<p class="text-card__desc">
 								В невесомости мышцы атрофируются, а кости теряют кальций. Экипаж
@@ -249,7 +239,7 @@
 								притягом) и велотренажере.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Гигиена</h3>
 							<p class="text-card__desc">
 								Душа на МКС нет — вода разлетается шариками. Используются влажные
@@ -264,14 +254,11 @@
 			<!-- Наука -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
 						<h2 class="section__title">Наука на высоте 400 км</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<ul class="list" style="margin-left: 20px; list-style-type: disc">
 							<li style="margin-bottom: 10px">
 								<strong>Медицина:</strong> Изучение раковых клеток и бактерий в
@@ -298,14 +285,11 @@
 			<!-- Будущее -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПЕРСПЕКТИВЫ</span>
 						<h2 class="section__title">Финал истории</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Ресурс первых модулей подходит к концу. Эксплуатация МКС продлена до
 							2030 года. После этого станция будет контролируемо сведена с орбиты и
@@ -314,7 +298,8 @@
 						<p>
 							На смену МКС придут коммерческие орбитальные станции (например, от Axiom
 							Space) и окололунная станция Gateway, которая станет воротами в дальний
-							космос.
+							космос; подробнее о планетах и лунных миссиях см. в разделе
+							<a class="text-link" href="../planets/">планеты Солнечной системы</a>.
 						</p>
 					</article>
 				</div>
@@ -323,12 +308,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли увидеть МКС с Земли?</summary>
 							<p>
 								Да! Это третий по яркости объект на небе после Солнца и Луны. Она
@@ -337,14 +322,14 @@
 								пролетов.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Как там спят?</summary>
 							<p>
 								В спальных мешках, пристегнутых к стене каюты, чтобы не летать по
 								станции во сне и не удариться. Понятия "верх" и "низ" там нет.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Есть ли там интернет?</summary>
 							<p>
 								Да, космонавты имеют доступ к интернету, могут звонить родным,
@@ -360,7 +345,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
