--- a/exploration/jwst.html
+++ b/exploration/jwst.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>James Webb: новый взгляд на Вселенную | Космонавтика</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -182,29 +182,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #ffd700"
-					>
-						JAMES WEBB
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ГЛАЗ, ВИДЯЩИЙ СКВОЗЬ ВРЕМЯ
-					</p>
+					<h1 class="hero__title">JAMES WEBB</h1>
+					<p class="hero__subtitle">ГЛАЗ, ВИДЯЩИЙ СКВОЗЬ ВРЕМЯ</p>
 				</div>
 			</section>
 
 			<!-- Технологии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИНЖЕНЕРИЯ</span>
 						<h2 class="section__title">Золотое зеркало</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Главное зеркало <strong>JWST</strong> имеет диаметр 6.5 метра (в 2.5
 							раза больше Хаббла) и состоит из 18 шестиугольных сегментов. Они
@@ -229,26 +219,26 @@
 			<!-- Хаббл vs Уэбб -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СРАВНЕНИЕ</span>
 						<h2 class="section__title">Хаббл против Уэбба</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Диапазон</h3>
 							<p class="text-card__desc">
 								Хаббл "видит" в основном в видимом и ультрафиолетовом свете. Уэбб —
 								в инфракрасном. Это позволяет ему смотреть сквозь пылевые облака.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Орбита</h3>
 							<p class="text-card__desc">
 								Хаббл вращается вокруг Земли (570 км). Уэбб — вокруг Солнца в точке
 								Лагранжа L2 (1.5 млн км от Земли), всегда оставаясь в тени планеты.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Чувствительность</h3>
 							<p class="text-card__desc">
 								Уэбб в 100 раз мощнее Хаббла. Он способен заметить тепловую
@@ -262,30 +252,30 @@
 			<!-- Открытия -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОТКРЫТИЯ</span>
 						<h2 class="section__title">Первые результаты</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<ul class="list" style="margin-left: 20px; list-style-type: disc">
 							<li style="margin-bottom: 10px">
 								<strong>Первые галактики:</strong> Уэбб обнаружил галактики,
 								существовавшие всего через 300 млн лет после Большого взрыва. Они
 								оказались неожиданно массивными и яркими, что ставит под сомнение
-								текущие модели.
+								текущие модели; подробнее о крупномасштабной структуре см. в разделе
+								<a class="text-link" href="../galaxies/">галактики</a>.
 							</li>
 							<li style="margin-bottom: 10px">
 								<strong>Атмосферы экзопланет:</strong> Телескоп впервые детально
 								проанализировал состав атмосферы планеты WASP-39b, обнаружив там
-								углекислый газ.
+								углекислый газ; больше о классах экзопланет — в разделе
+								<a class="text-link" href="../planets/">планеты и экзопланеты</a>.
 							</li>
 							<li>
 								<strong>Звёздные ясли:</strong> Снимки туманности Киля и Столпов
 								Творения показали процесс рождения звезд с невиданной ранее
-								детализацией.
+								детализацией; сравните с классическими наблюдениями телескопа
+								<a class="text-link" href="hubble.html">Хаббл</a>.
 							</li>
 						</ul>
 					</article>
@@ -295,12 +285,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли отремонтировать JWST?</summary>
 							<p>
 								В отличие от Хаббла, Уэбб находится слишком далеко для сервисных
@@ -309,7 +299,7 @@
 								дозаправки в будущем.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Почему снимки цветные?</summary>
 							<p>
 								Инфракрасный свет невидим для человеческого глаза. Ученые
@@ -318,7 +308,7 @@
 								объектов.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Сколько проработает телескоп?</summary>
 							<p>
 								Изначально миссия рассчитывалась на 5-10 лет. Однако благодаря
@@ -334,7 +324,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
