--- a/exploration/voyager.html
+++ b/exploration/voyager.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Voyager: путешествие за пределы Солнечной системы | Космос</title>
 		<meta
@@ -153,7 +153,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -188,34 +188,26 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #4a90e2"
-					>
-						VOYAGER
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ПОСЛАННИК В МЕЖЗВЁЗДНОЕ ПРОСТРАНСТВО
-					</p>
+					<h1 class="hero__title">VOYAGER</h1>
+					<p class="hero__subtitle">ПОСЛАННИК В МЕЖЗВЁЗДНОЕ ПРОСТРАНСТВО</p>
 				</div>
 			</section>
 
 			<!-- Гранд-тур -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МИССИЯ</span>
 						<h2 class="section__title">Гранд-тур</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В конце 1970-х планеты-гиганты выстроились в редкий парад, который
 							происходит раз в 176 лет. Это позволило NASA использовать гравитационные
 							маневры, чтобы одним зондом облететь Юпитер, Сатурн, Уран и Нептун,
-							сократив время полета с 40 до 12 лет.
+							сократив время полета с 40 до 12 лет; подробнее о самих
+							планетах-гигантах см. в разделе
+							<a class="text-link" href="../planets/">планеты Солнечной системы</a>.
 						</p>
 						<p>
 							Зонды <strong>Voyager 1</strong> и <strong>Voyager 2</strong>,
@@ -230,12 +222,12 @@
 			<!-- Технологии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИНЖЕНЕРИЯ</span>
 						<h2 class="section__title">Технологии 70-х</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Энергия</h3>
 							<p class="text-card__desc">
 								Солнечные панели там бесполезны. Вояджеры питаются от радиоизотопных
@@ -243,7 +235,7 @@
 								падает каждый год.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Память</h3>
 							<p class="text-card__desc">
 								Компьютеры зондов имеют в тысячи раз меньше памяти, чем современный
@@ -251,7 +243,7 @@
 								Землю.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Связь</h3>
 							<p class="text-card__desc">
 								Сигнал от Вояджера 1 идет до Земли более 22 часов. Мы слышим его
@@ -266,14 +258,11 @@
 			<!-- Золотая пластинка -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПОСЛАНИЕ</span>
 						<h2 class="section__title">Золотая пластинка</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							На борту каждого зонда закреплен позолоченный медный диск — послание для
 							внеземных цивилизаций. Он содержит 115 изображений, звуки природы
@@ -292,14 +281,11 @@
 			<!-- Межзвездная среда -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ГРАНИЦА</span>
 						<h2 class="section__title">Pale Blue Dot</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В 1990 году, по просьбе Карла Сагана, Вояджер 1 развернулся и сделал
 							снимок Земли с расстояния 6 млрд км. Наша планета выглядит как крошечная
@@ -308,7 +294,9 @@
 						<p>
 							В 2012 году Вояджер 1 первым в истории вышел в межзвездное пространство,
 							пересекли гелиопаузу — границу, где солнечный ветер сталкивается с
-							межзвездной плазмой.
+							межзвездной плазмой; подробнее о звёздах и межзвёздной среде см. в
+							разделе
+							<a class="text-link" href="../stars/">звёзды и их эволюция</a>.
 						</p>
 					</article>
 				</div>
@@ -317,12 +305,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Когда Вояджеры отключатся?</summary>
 							<p>
 								Инженеры NASA постепенно отключают научные приборы, чтобы сэкономить
@@ -330,7 +318,7 @@
 								2025-2030 года. После этого они станут "мертвыми" странниками.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Долетят ли они до других звезд?</summary>
 							<p>
 								Вояджер 1 направляется в сторону созвездия Змееносца. Через 40 000
@@ -338,7 +326,7 @@
 								путешествие займет эоны лет.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Можно ли их догнать?</summary>
 							<p>
 								Теоретически да, с помощью современных технологий (например, ионных
@@ -354,7 +342,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
