--- a/galaxies/sombrero.html
+++ b/galaxies/sombrero.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Галактика Сомбреро (M104): корона Вселенной | Галактики</title>
 		<meta
@@ -186,29 +186,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #f1c40f"
-					>
-						СОМБРЕРО
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ГАЛАКТИКА M104
-					</p>
+					<h1 class="hero__title">СОМБРЕРО</h1>
+					<p class="hero__subtitle">ГАЛАКТИКА M104</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОБЗОР</span>
 						<h2 class="section__title">Космическая шляпа</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Галактика Сомбреро</strong> (M104) — один из самых узнаваемых
 							объектов глубокого космоса. Она получила свое название благодаря
@@ -227,19 +217,19 @@
 			<!-- Структура -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СТРОЕНИЕ</span>
 						<h2 class="section__title">Анатомия гиганта</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Пылевое кольцо</h3>
 							<p class="text-card__desc">
 								Главная "поля" шляпы. Это кольцо холодного газа и пыли, где активно
 								рождаются новые звезды.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Балдж</h3>
 							<p class="text-card__desc">
 								Огромное центральное вздутие, состоящее из старых желтых звезд.
@@ -247,7 +237,7 @@
 								или эллиптическая галактика?
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Гало</h3>
 							<p class="text-card__desc">
 								Галактику окружает обширное облако из примерно 2000 шаровых
@@ -261,14 +251,11 @@
 			<!-- Черная дыра -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЯДРО</span>
 						<h2 class="section__title">Сверхмассивный монстр</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В сердце Сомбреро скрывается настоящий монстр — сверхмассивная чёрная
 							дыра массой около <strong>1 миллиарда солнц</strong>. Это одна из самых
@@ -286,12 +273,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли увидеть её в телескоп?</summary>
 							<p>
 								Да! Сомбреро имеет звездную величину +8.0, что делает её доступной
@@ -300,14 +287,14 @@
 								разделяющую галактику.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Одинок ли Сомбреро?</summary>
 							<p>
 								Нет, хотя она кажется изолированной. M104 входит в группу галактик,
 								связанную со скоплением Девы, но находится на её окраине.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>К какому типу она относится?</summary>
 							<p>
 								Это гибрид. Официально она классифицируется как спиральная галактика
@@ -324,7 +311,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
