--- a/planets/index.html
+++ b/planets/index.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Планеты Солнечной системы: характеристики, спутники</title>
 		<meta
@@ -138,7 +138,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -162,28 +162,21 @@
 			<section class="hero" aria-label="Планеты">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						ПЛАНЕТЫ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						МИРЫ В КОСМИЧЕСКОМ ПРОСТРАНСТВЕ
-					</p>
+					<h1 class="hero__title">ПЛАНЕТЫ</h1>
+					<p class="hero__subtitle">МИРЫ В КОСМИЧЕСКОМ ПРОСТРАНСТВЕ</p>
 				</div>
 			</section>
 
 			<!-- Планетные системы -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФОРМИРОВАНИЕ</span>
 						<h2 class="section__title">
 							Планетные системы: формирование орбит и ядро планет
 						</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							После рождения звезды вокруг неё формируется протопланетный диск. В нём
 							орбиты могут изменяться из‑за взаимодействия с диском и другими телами.
@@ -210,20 +203,20 @@
 			<section class="section">
 				<div class="container">
 					<article class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+						<div class="stat">
 							<div class="stat__value">8</div>
 							<div class="stat__label">ПЛАНЕТ В СИСТЕМЕ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">146+</div>
 							<div class="stat__label">СПУТНИКОВ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">5</div>
 							<div class="stat__label">КАРЛИКОВЫХ ПЛАНЕТ</div>
 						</div>
 					</article>
-					<div class="info-band animate-fade-in" style="animation-delay: 400ms">
+					<div class="info-band">
 						<div class="info-band__inner">
 							<span class="info-band__dot"></span>
 							<span class="info-band__text"
@@ -240,12 +233,12 @@
 			<!-- Типы планет -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
 						<h2 class="section__title">Типы планет</h2>
 					</div>
 					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Каменные планеты</h3>
 							<p class="text-card__desc">
 								Меркурий,
@@ -256,7 +249,7 @@
 								активностью.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Газовые гиганты</h3>
 							<p class="text-card__desc">
 								<a class="text-link" href="jupiter.html">Юпитер</a> и
@@ -265,7 +258,7 @@
 								полями, кольцевыми системами и десятками спутников.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Ледяные гиганты</h3>
 							<p class="text-card__desc">
 								Уран и Нептун содержат больше «льдов» — воды, метана и аммиака.
@@ -280,14 +273,11 @@
 			<!-- Цифры о планетах -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЦИФРЫ</span>
 						<h2 class="section__title">Научные факты о планетах</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Радиус <strong>Юпитера</strong> примерно в 11 раз больше радиуса Земли,
 							а масса — в 318 раз больше. При этом средняя плотность газа в его
@@ -308,12 +298,12 @@
 			<!-- FAQ о планетах -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы о планетах</h2>
 					</div>
 					<article class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Почему Плутон больше не планета?</summary>
 							<p>
 								В 2006 году Международный астрономический союз переклассифицировал
@@ -321,19 +311,22 @@
 								других объектов.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Какая планета самая большая в Солнечной системе?</summary>
 							<p>
 								Юпитер — крупнейшая планета с массой в 318 раз больше земной и
 								диаметром около 140 000 км. Его объём вмещает более 1300 Земель.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Есть ли жизнь на других планетах?</summary>
 							<p>
 								Пока не обнаружено прямых доказательств жизни за пределами Земли.
 								Однако спутники Европа (Юпитер) и Энцелад (Сатурн) имеют
-								подповерхностные океаны, где возможны условия для микробной жизни.
+								подповерхностные океаны, где возможны условия для микробной жизни;
+								подробнее о поиске жизни см. в разделе
+								<a class="text-link" href="../exploration/">исследование космоса</a
+								>.
 							</p>
 						</details>
 					</article>
@@ -343,7 +336,7 @@
 			<!-- Интерактивная карта орбит -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИНТЕРАКТИВ</span>
 						<h2 class="section__title">Солнечная система</h2>
 					</div>
@@ -501,14 +494,11 @@
 			<!-- Атмосферы планет -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АТМОСФЕРЫ</span>
 						<h2 class="section__title">Атмосферы планет Солнечной системы</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Атмосфера планеты определяет её климат, защиту от космического излучения
 							и потенциал для жизни. Земля обладает уникальной азотно-кислородной
@@ -533,26 +523,26 @@
 			<!-- Спутники планет -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СПУТНИКИ</span>
 						<h2 class="section__title">Крупнейшие спутники</h2>
 					</div>
 					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Ганимед (Юпитер)</h3>
 							<p class="text-card__desc">
 								Крупнейший спутник в Солнечной системе (5268 км), больше Меркурия.
 								Имеет собственное магнитное поле и подповерхностный океан.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Титан (Сатурн)</h3>
 							<p class="text-card__desc">
 								Единственный спутник с плотной атмосферой. Метановые озёра и реки,
 								органическая химия. Потенциальная цель для поиска жизни.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Европа (Юпитер)</h3>
 							<p class="text-card__desc">
 								Ледяная поверхность скрывает глобальный океан глубиной до 100 км.
@@ -566,12 +556,12 @@
 			<!-- Сравнение планет -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СРАВНЕНИЕ</span>
 						<h2 class="section__title">Земная группа vs Газовые гиганты</h2>
 					</div>
 					<div class="compare">
-						<article class="compare__col animate-fade-up" style="animation-delay: 0ms">
+						<div class="compare__col">
 							<div class="compare__head">Земная группа</div>
 							<ul class="compare__list">
 								<li>Твёрдая поверхность</li>
@@ -580,11 +570,8 @@
 								<li>Близко к Солнцу</li>
 								<li>Медленное вращение</li>
 							</ul>
-						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 150ms"
-						>
+						</div>
+						<div class="compare__col">
 							<div class="compare__head">Газовые гиганты</div>
 							<ul class="compare__list">
 								<li>Газовая оболочка</li>
@@ -593,11 +580,8 @@
 								<li>Далеко от Солнца</li>
 								<li>Быстрое вращение</li>
 							</ul>
-						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 300ms"
-						>
+						</div>
+						<div class="compare__col">
 							<div class="compare__head">Ледяные гиганты</div>
 							<ul class="compare__list">
 								<li>«Ледяная» мантия</li>
@@ -606,7 +590,7 @@
 								<li>Внешняя область системы</li>
 								<li>Экстремальные наклоны</li>
 							</ul>
-						</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -615,7 +599,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
