--- a/planets/jupiter.html
+++ b/planets/jupiter.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Юпитер: король планет, штормы и спутники | Космос</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -182,29 +182,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #c88b3a"
-					>
-						ЮПИТЕР
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						КОРОЛЬ ПЛАНЕТ
-					</p>
+					<h1 class="hero__title">ЮПИТЕР</h1>
+					<p class="hero__subtitle">КОРОЛЬ ПЛАНЕТ</p>
 				</div>
 			</section>
 
 			<!-- Описание -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОБЗОР</span>
 						<h2 class="section__title">Газовый гигант</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Юпитер</strong> — пятая планета от Солнца и абсолютный доминант
 							нашей системы. Его масса в 2,5 раза превышает суммарную массу всех
@@ -223,14 +213,11 @@
 			<!-- Внутреннее строение -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НЕДРА</span>
 						<h2 class="section__title">Океан металла</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Под облаками из аммиака и воды скрывается самая большая тайна Юпитера.
 							По мере погружения давление растет настолько, что водород сжимается в
@@ -249,14 +236,11 @@
 			<!-- Штормы -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АТМОСФЕРА</span>
 						<h2 class="section__title">Великое Красное Пятно</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Самый известный шторм Солнечной системы бушует на Юпитере уже более 350
 							лет. <strong>Великое Красное Пятно</strong> — это антициклон размером
@@ -274,14 +258,11 @@
 			<!-- Магнитосфера -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МАГНИТОСФЕРА</span>
 						<h2 class="section__title">Радиационный ад</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Магнитное поле Юпитера в 20 000 раз мощнее земного. Оно простирается на
 							миллионы километров, достигая орбиты Сатурна. В этой ловушке разгоняются
@@ -299,26 +280,26 @@
 			<!-- Спутники -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СВИТА</span>
 						<h2 class="section__title">Империя лун</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Ио</h3>
 							<p class="text-card__desc">
 								Вулканический ад. Гравитация Юпитера и соседних лун буквально
 								сминает Ио, разогревая недра и вызывая постоянные извержения.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Европа</h3>
 							<p class="text-card__desc">
 								Ледяной мир, скрывающий глобальный соленый океан. Главный кандидат
 								на наличие внеземной жизни в Солнечной системе.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Ганимед</h3>
 							<p class="text-card__desc">
 								Крупнейший спутник в системе (больше Меркурия!). Единственная луна,
@@ -332,14 +313,11 @@
 			<!-- Миссии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
 						<h2 class="section__title">Посланники Земли</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Первыми Юпитер посетили <strong>Pioneer 10</strong> и
 							<strong>11</strong>, проложив путь через пояс астероидов. Затем
@@ -359,12 +337,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли высадиться на Юпитер?</summary>
 							<p>
 								Нет. У Юпитера нет твердой поверхности. Вы будете опускаться сквозь
@@ -372,7 +350,7 @@
 								чудовищным давлением.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Защищает ли Юпитер Землю?</summary>
 							<p>
 								Спорный вопрос. Ранее считалось, что он "пылесосит" кометы, спасая
@@ -381,7 +359,7 @@
 								внутреннюю часть системы.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Почему Юпитер не стал звездой?</summary>
 							<p>
 								Ему нужно быть в 80 раз массивнее, чтобы в ядре начался термоядерный
@@ -396,7 +374,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
