--- a/planets/mars.html
+++ b/planets/mars.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Марс: Красная планета, поиск жизни, миссии | Космос</title>
 		<meta
@@ -182,29 +182,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #e27b58"
-					>
-						МАРС
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						КРАСНАЯ ПЛАНЕТА
-					</p>
+					<h1 class="hero__title">МАРС</h1>
+					<p class="hero__subtitle">КРАСНАЯ ПЛАНЕТА</p>
 				</div>
 			</section>
 
 			<!-- Описание -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОБЗОР</span>
 						<h2 class="section__title">Мир ржавчины</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Марс</strong> — холодная пустыня, покрытая мелкой пылью оксида
 							железа (ржавчиной), что придает ей кроваво-красный оттенок. Атмосфера
@@ -222,26 +212,26 @@
 			<!-- География -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ГЕОГРАФИЯ</span>
 						<h2 class="section__title">Планета гигантов</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Олимп</h3>
 							<p class="text-card__desc">
 								Потухший вулкан высотой 21.9 км — самая высокая гора в Солнечной
 								системе. Его основание по площади равно Франции.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Долины Маринер</h3>
 							<p class="text-card__desc">
 								Система каньонов длиной 4500 км и глубиной до 11 км. Если бы они
 								были на Земле, то простирались бы от Москвы до Лиссабона.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Эллада</h3>
 							<p class="text-card__desc">
 								Огромная ударная равнина в южном полушарии, самая низкая точка
@@ -255,14 +245,11 @@
 			<!-- Вода и Жизнь -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПОИСК</span>
 						<h2 class="section__title">Была ли жизнь?</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Марсоходы Curiosity и Perseverance нашли неопровержимые доказательства
 							того, что миллиарды лет назад Марс был теплым и влажным. В кратере Езеро
@@ -285,14 +272,11 @@
 			<!-- Колонизация -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">БУДУЩЕЕ</span>
 						<h2 class="section__title">Вторая Земля?</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Илон Маск и SpaceX планируют отправить людей на Марс в ближайшие
 							десятилетия с помощью корабля Starship. Главные проблемы: радиация,
@@ -310,19 +294,19 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Сколько лететь до Марса?</summary>
 							<p>
 								При текущих технологиях полет занимает от 6 до 9 месяцев. Окно для
 								запуска открывается каждые 26 месяцев, когда планеты сближаются.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Почему Марс красный?</summary>
 							<p>
 								Поверхность покрыта пылью, богатой оксидом железа (Fe₂O₃). По сути,
@@ -330,7 +314,7 @@
 								взвешенной пыли, а закаты на Марсе — голубые.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Можно ли там дышать?</summary>
 							<p>
 								Нет. Атмосфера слишком разреженная и состоит из углекислого газа.
@@ -346,7 +330,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
