--- a/planets/saturn.html
+++ b/planets/saturn.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Сатурн: властелин колец | Планеты</title>
 		<meta
@@ -180,29 +180,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #f39c12"
-					>
-						САТУРН
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ВЛАСТЕЛИН КОЛЕЦ
-					</p>
+					<h1 class="hero__title">САТУРН</h1>
+					<p class="hero__subtitle">ВЛАСТЕЛИН КОЛЕЦ</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОБЗОР</span>
 						<h2 class="section__title">Жемчужина системы</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Сатурн</strong> — шестая планета от Солнца и вторая по величине.
 							Это газовый гигант, состоящий из водорода и гелия. Удивительно, но
@@ -220,14 +210,11 @@
 			<!-- Кольца -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КОЛЬЦА</span>
 						<h2 class="section__title">Ледяное великолепие</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Кольца Сатурна — самые яркие и сложные в Солнечной системе. Они состоят
 							из миллиардов кусков льда и камня размером от песчинки до дома. Толщина
@@ -247,14 +234,11 @@
 			<!-- Гексагон -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АТМОСФЕРА</span>
 						<h2 class="section__title">Загадка гексагона</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							На северном полюсе Сатурна бушует уникальный шторм правильной
 							<strong>шестиугольной формы</strong>. Каждая сторона этого "гексагона"
@@ -273,12 +257,12 @@
 			<!-- Спутники -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СПУТНИКИ</span>
 						<h2 class="section__title">Миры-океаны</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Титан</h3>
 							<p class="text-card__desc">
 								Единственный спутник с плотной атмосферой и жидкими озерами из
@@ -286,14 +270,14 @@
 								альтернативной биохимии.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Энцелад</h3>
 							<p class="text-card__desc">
 								Маленький ледяной спутник, выбрасывающий в космос гейзеры водяного
 								пара. Под его корой скрывается теплый соленый океан с органикой.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Мимас</h3>
 							<p class="text-card__desc">
 								Известен огромным ударным кратером Гершель, который делает спутник
@@ -307,14 +291,11 @@
 			<!-- Кассини -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МИССИЯ</span>
 						<h2 class="section__title">Наследие Кассини</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Зонд NASA/ESA <strong>Cassini</strong> изучал систему Сатурна 13 лет
 							(2004-2017). Он сбросил зонд Huygens на Титан (первая посадка во внешней
@@ -333,19 +314,19 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли ходить по кольцам?</summary>
 							<p>
 								Нет. Кольца не сплошные. Это рой летящих глыб льда. Вы бы просто
 								парили в невесомости среди этих осколков, рискуя столкнуться с ними.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Сколько лет Сатурну?</summary>
 							<p>
 								Как и все планеты, он сформировался около 4.5 миллиардов лет назад.
@@ -353,7 +334,7 @@
 								10-100 миллионов лет (эпоха динозавров).
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Почему Титан оранжевый?</summary>
 							<p>
 								Из-за "смога" в атмосфере. Солнечный ультрафиолет разрушает метан в
@@ -369,7 +350,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
