--- a/planets/venus.html
+++ b/planets/venus.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Венера: злая сестра Земли | Планеты</title>
 		<meta
@@ -183,29 +183,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #e67e22"
-					>
-						ВЕНЕРА
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						АДСКАЯ КРАСАВИЦА
-					</p>
+					<h1 class="hero__title">ВЕНЕРА</h1>
+					<p class="hero__subtitle">АДСКАЯ КРАСАВИЦА</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛИМАТ</span>
 						<h2 class="section__title">Парниковый котел</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Венера</strong> — самая горячая планета Солнечной системы,
 							разогретая до 470°C — горячее, чем Меркурий, хотя находится дальше от
@@ -230,12 +220,12 @@
 			<!-- Геология -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПОВЕРХНОСТЬ</span>
 						<h2 class="section__title">Мир вулканов</h2>
 					</div>
 					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Вулканизм</h3>
 							<p class="text-card__desc">
 								Венера усеяна тысячами вулканов. Некоторые из них (например, Маат
@@ -243,14 +233,14 @@
 								сернистый газ.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Тессеры</h3>
 							<p class="text-card__desc">
 								Древнейшие участки коры, сильно деформированные и похожие на паркет
 								или черепицу. Уникальная особенность венер ианского ландшафта.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Отсутствие плит</h3>
 							<p class="text-card__desc">
 								На Венере нет движения тектонических плит, как на Земле. Внутреннее
@@ -265,14 +255,11 @@
 			<!-- Исследования -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИСТОРИЯ</span>
 						<h2 class="section__title">Советский триумф</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Венера — единственная планета, с поверхности которой удалось получить
 							цветные снимки. Это заслуга советской программы "Венера". Аппараты
@@ -292,12 +279,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Почему Венера вращается назад?</summary>
 							<p>
 								Венера вращается по часовой стрелке (ретроградно), в отличие от
@@ -306,7 +293,7 @@
 								астероидом в прошлом.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Правда ли, что день там длиннее года?</summary>
 							<p>
 								Да. Венера делает оборот вокруг своей оси за 243 земных дня, а
@@ -315,7 +302,7 @@
 								дней.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Была ли Венера похожа на Землю?</summary>
 							<p>
 								Модели показывают, что в ранней молодости на Венере могли быть
@@ -331,7 +318,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
