--- a/stars/index.html
+++ b/stars/index.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Звёзды: типы, эволюция, экзопланеты | Диаграмма HR</title>
 		<meta
@@ -138,7 +138,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -159,29 +159,22 @@
 				<a class="breadcrumbs__link u-url" href="../index.html">Главная</a>
 				<span class="breadcrumbs__current p-name">Звёзды</span>
 			</nav>
-			<section class="hero" aria-label="Звезды">
+			<section class="hero" aria-label="Звёзды">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						ЗВЕЗДЫ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						СВЕТИЛА КОСМИЧЕСКОГО ПРОСТРАНСТВА
-					</p>
+					<h1 class="hero__title">ЗВЕЗДЫ</h1>
+					<p class="hero__subtitle">СВЕТИЛА КОСМИЧЕСКОГО ПРОСТРАНСТВА</p>
 				</div>
 			</section>
 
 			<!-- Туманности и рождение звёзд -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">РОЖДЕНИЕ</span>
 						<h2 class="section__title">Туманности и рождение звёзд</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<div>
 						<p style="margin-bottom: 16px">
 							<strong>Туманность</strong> — это облако газа и пыли, из которого
 							рождаются протопланеты и новые светила. Внутри плотных областей
@@ -192,34 +185,30 @@
 							звёзд, подробно описано в материале
 							<a class="text-link" href="../planets/">планеты Солнечной системы</a>.
 						</p>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Жизненный цикл звёзд -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЭВОЛЮЦИЯ</span>
 						<h2 class="section__title">
 							Жизненный цикл звёзд: сверхновая, нейтронная звезда и пульсар
 						</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<div>
 						<p style="margin-bottom: 16px">
 							Массивные звёзды завершают своё существование как
-								<a class="text-link" href="supernova.html"
-									><strong>сверхновая</strong></a
-								>
+							<a class="text-link" href="supernova.html"
+								><strong>сверхновая</strong></a
+							>
 							— мощный взрыв, разбрасывающий тяжёлые элементы по межзвёздной среде.
 							Остатком может стать
-								<a class="text-link" href="neutron-stars.html"
-									><strong>нейтронная звезда</strong></a
-								>;
-							если её магнитное поле и ось вращения необычно ориентированы, мы
+							<a class="text-link" href="neutron-stars.html"
+								><strong>нейтронная звезда</strong></a
+							>; если её магнитное поле и ось вращения необычно ориентированы, мы
 							наблюдаем <strong>пульсар</strong> — космический «маяк», испускающий
 							радиопульсы.
 						</p>
@@ -229,28 +218,28 @@
 							массивных звёздных систем, см. в разделе
 							<a class="text-link" href="../galaxies/">галактики и квазары</a>.
 						</p>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Дополнительный контент: статистика -->
 			<section class="section">
 				<div class="container">
-					<article class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+					<div class="stats">
+						<div class="stat">
 							<div class="stat__value">50 000 K</div>
 							<div class="stat__label">МАКС. ТЕМПЕРАТУРА</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">150 M☉</div>
 							<div class="stat__label">МАКС. МАССА</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">13 млрд+</div>
 							<div class="stat__label">ВОЗРАСТ СТАРЫХ ЗВЁЗД</div>
 						</div>
-					</article>
-					<article class="info-band animate-fade-in" style="animation-delay: 400ms">
+					</div>
+					<div class="info-band">
 						<div class="info-band__inner">
 							<span class="info-band__dot"></span>
 							<span class="info-band__text"
@@ -262,56 +251,55 @@
 							>
 							<span class="info-band__dot"></span>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Спектральная классификация -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
 						<h2 class="section__title">Спектральные классы звёзд</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+					<div class="text-cards">
+						<article class="text-card">
 							<h3 class="text-card__title">O, B — Голубые гиганты</h3>
 							<p class="text-card__desc">
 								Самые горячие и массивные звёзды с температурой 30 000–50 000 K.
 								Короткая продолжительность жизни, заканчивают существование как
 								сверхновые.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</article>
+						<article class="text-card">
 							<h3 class="text-card__title">G, K — Жёлтые карлики</h3>
 							<p class="text-card__desc">
 								Солнце относится к классу G. Температура 5000–6000 K, стабильное
 								горение в течение миллиардов лет. Оптимальны для формирования
-								планетных систем.
+								планетных систем; подробнее о планетах см. в разделе
+								<a class="text-link" href="../planets/">планеты Солнечной системы</a
+								>.
 							</p>
-						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						</article>
+						<article class="text-card">
 							<h3 class="text-card__title">M — Красные карлики</h3>
 							<p class="text-card__desc">
 								Самые распространённые звёзды с температурой 2500–4000 K. Медленно
 								сжигают топливо и могут существовать триллионы лет.
 							</p>
-						</div>
-					</article>
+						</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Тёмная материя и среда -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КОСМИЧЕСКАЯ СРЕДА</span>
 						<h2 class="section__title">Тёмная материя и космическая среда</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<div>
 						<p style="margin-bottom: 16px">
 							Наблюдения вращения галактик и крупномасштабной структуры указывают, что
 							заметную долю массы Вселенной составляет
@@ -323,18 +311,18 @@
 							<strong>гравитационные волны</strong> при слиянии массивных объектов
 							открывают новые способы наблюдения за Вселенной.
 						</p>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Диаграмма Герцшпрунга-Рассела -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИНТЕРАКТИВ</span>
 						<h2 class="section__title">Диаграмма Герцшпрунга-Рассела</h2>
 					</div>
-					<article class="hr-diagram">
+					<div class="hr-diagram">
 						<div class="hr-axis hr-axis-x"></div>
 						<div class="hr-axis hr-axis-y"></div>
 
@@ -441,7 +429,7 @@
 								height: 8px;
 							"
 						></div>
-					</article>
+					</div>
 					<p
 						style="
 							text-align: center;
@@ -459,12 +447,12 @@
 			<!-- Звёздные системы -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СИСТЕМЫ</span>
 						<h2 class="section__title">Типы звёздных систем</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
+					<div class="compare">
+						<div class="compare__col">
 							<div class="compare__head">Одиночные звёзды</div>
 							<ul class="compare__list">
 								<li>Солнце — типичный пример</li>
@@ -473,7 +461,7 @@
 								<li>Предсказуемые орбиты</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
+						<div class="compare__col">
 							<div class="compare__head">Двойные системы</div>
 							<ul class="compare__list">
 								<li>Две звезды вокруг общего центра</li>
@@ -482,7 +470,7 @@
 								<li>Альфа Центавра — пример</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 300ms">
+						<div class="compare__col">
 							<div class="compare__head">Кратные системы</div>
 							<ul class="compare__list">
 								<li>Три и более звезды</li>
@@ -491,17 +479,17 @@
 								<li>Редко имеют планеты</li>
 							</ul>
 						</div>
+					</div>
+				</div>
+			</section>
 			<!-- Экзопланеты -->
-  			<section class="section">
-  				<div class="container">
-  					<div class="section__header animate-fade-down">
-  						<span class="section__tag">ЭКЗОПЛАНЕТЫ</span>
-  						<h2 class="section__title">Поиск планет у других звёзд</h2>
-  					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+			<section class="section">
+				<div class="container">
+					<div class="section__header">
+						<span class="section__tag">ЭКЗОПЛАНЕТЫ</span>
+						<h2 class="section__title">Поиск планет у других звёзд</h2>
+					</div>
+					<div>
 						<p style="margin-bottom: 16px">
 							С 1995 года открыто более 5500 <strong>экзопланет</strong> у других
 							звёзд. Методы обнаружения включают транзитный метод (затмение звезды
@@ -521,45 +509,44 @@
 							биомаркеры — признаки возможной жизни, такие как кислород, метан и
 							водяной пар в необычных пропорциях.
 						</p>
-  					</article>
-  				</div>
-  			</section>
+					</div>
+				</div>
+			</section>
 
 			<!-- Факты о звёздах -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФАКТЫ</span>
 						<h2 class="section__title">Числа и масштабы звёзд</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<div>
 						<p style="margin-bottom: 16px">
-							Свету требуется около <strong>8 минут 20 секунд</strong>, чтобы пройти расстояние от Солнца до
-							Земли, и более <strong>4 лет</strong>, чтобы добраться до ближайшей к нам звёздной системы
-							Альфа Центавра. В диске Млечного Пути содержится порядка <strong>100–400 млрд звёзд</strong>.
+							Свету требуется около <strong>8 минут 20 секунд</strong>, чтобы пройти
+							расстояние от Солнца до Земли, и более <strong>4 лет</strong>, чтобы
+							добраться до ближайшей к нам звёздной системы Альфа Центавра. В диске
+							Млечного Пути содержится порядка <strong>100–400 млрд звёзд</strong>.
 						</p>
 						<p>
-							Самые массивные известные звёзды (класс O) расходуют запас водорода настолько быстро, что живут
-							всего несколько миллионов лет, тогда как маломассивные <strong>красные карлики</strong> могут
-							существовать триллионы лет — дольше текущего возраста Вселенной. Это делает их главными кандидатами
-							на роль «долгоживущих» хозяев планетных систем.
+							Самые массивные известные звёзды (класс O) расходуют запас водорода
+							настолько быстро, что живут всего несколько миллионов лет, тогда как
+							маломассивные <strong>красные карлики</strong> могут существовать
+							триллионы лет — дольше текущего возраста Вселенной. Это делает их
+							главными кандидатами на роль «долгоживущих» хозяев планетных систем.
 						</p>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- FAQ о звёздах -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы о звёздах</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Как долго живут звёзды?</summary>
 							<p>
 								Продолжительность жизни зависит от массы: массивные звёзды живут
@@ -567,7 +554,7 @@
 								Солнце проживёт около 10 миллиардов лет.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что такое пульсар?</summary>
 							<p>
 								Пульсар — это быстро вращающаяся нейтронная звезда с мощным
@@ -575,12 +562,13 @@
 								Мы наблюдаем регулярные импульсы, когда луч направлен на Землю.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Могут ли звёзды взорваться?</summary>
 							<p>
 								Да, массивные звёзды завершают жизнь как сверхновые — мощные взрывы,
 								разбрасывающие вещество в космос. Остаток может стать нейтронной
-								звездой или чёрной дырой.
+								звездой или
+								<a class="text-link" href="../blackholes/">чёрной дырой</a>.
 							</p>
 						</details>
 					</div>
@@ -591,7 +579,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
