--- a/stars/neutron-stars.html
+++ b/stars/neutron-stars.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Нейтронные звёзды: сверхплотная материя | Звёзды</title>
 		<meta
@@ -183,33 +183,25 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #00d2d3"
-					>
-						ПУЛЬСАРЫ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						СВЕРХПЛОТНАЯ МАТЕРИЯ
-					</p>
+					<h1 class="hero__title">ПУЛЬСАРЫ</h1>
+					<p class="hero__subtitle">СВЕРХПЛОТНАЯ МАТЕРИЯ</p>
 				</div>
 			</section>
 
 			<!-- Плотность -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПЛОТНОСТЬ</span>
 						<h2 class="section__title">Тяжелее Эвереста</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Нейтронная звезда</strong> — это "труп" массивной звезды,
-							сжавшийся после взрыва сверхновой. В шаре диаметром всего 20 км (размер
-							Москвы) упакована масса, превышающая солнечную в 1.5 раза.
+							сжавшийся после взрыва
+							<a class="text-link" href="supernova.html">сверхновой</a>. В шаре
+							диаметром всего 20 км (размер Москвы) упакована масса, превышающая
+							солнечную в 1.5 раза.
 						</p>
 						<p>
 							Гравитация здесь настолько сильна, что электроны "вдавливаются" в
@@ -224,14 +216,11 @@
 			<!-- Пульсары -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МАЯКИ</span>
 						<h2 class="section__title">Космические часы</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Многие нейтронные звёзды вращаются с безумной скоростью — до 700
 							оборотов в секунду. Они испускают узкие пучки радиоизлучения с полюсов.
@@ -250,14 +239,11 @@
 			<!-- Килоновая -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АЛХИМИЯ</span>
 						<h2 class="section__title">Рождение золота</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Когда две нейтронные звезды сталкиваются, происходит взрыв
 							<strong>килоновой</strong>. Это событие порождает мощнейшие
@@ -275,12 +261,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Что такое "ядерная паста"?</summary>
 							<p>
 								Это состояние материи глубоко в коре нейтронной звезды. Под
@@ -289,7 +275,7 @@
 								прочный материал во Вселенной.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что будет, если упасть на нейтронную звезду?</summary>
 							<p>
 								Гравитация разорвет вас на атомы задолго до поверхности. При падении
@@ -297,7 +283,7 @@
 								зефира выделил бы энергию, равную взрыву атомной бомбы.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Что такое магнетар?</summary>
 							<p>
 								Это редкий тип нейтронной звезды с магнитным полем в квадриллионы
@@ -313,7 +299,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
