--- a/stars/sun.html
+++ b/stars/sun.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Солнце: структура, активность, пятна | Космос</title>
 		<meta
@@ -179,33 +179,24 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #ffcc00"
-					>
-						СОЛНЦЕ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ЗВЕЗДА ПО ИМЕНИ СОЛНЦЕ
-					</p>
+					<h1 class="hero__title">СОЛНЦЕ</h1>
+					<p class="hero__subtitle">ЗВЕЗДА ПО ИМЕНИ СОЛНЦЕ</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ГЛАВНАЯ ЗВЕЗДА</span>
 						<h2 class="section__title">Сердце нашей системы</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Солнце</strong> — это желтый карлик спектрального класса G2V,
 							идеальная сфера раскаленной плазмы. Оно составляет 99.86% всей массы
-							Солнечной системы — настолько оно огромно по сравнению с планетами.
+							Солнечной системы — настолько оно огромно по сравнению с
+							<a class="text-link" href="../planets/">планетами</a>.
 						</p>
 						<p>
 							В ядре звезды каждую секунду 600 миллионов тонн водорода превращаются в
@@ -220,26 +211,26 @@
 			<!-- Структура -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СТРОЕНИЕ</span>
 						<h2 class="section__title">Слои Солнца</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Ядро</h3>
 							<p class="text-card__desc">
 								Зона термоядерных реакций. Температура здесь достигает 15 миллионов
 								градусов, а давление в 265 миллиардов раз выше земного атмосферного.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Лучистая зона</h3>
 							<p class="text-card__desc">
 								Слой, где энергия передается фотонами. Свету может потребоваться до
 								170 000 лет, чтобы выбраться из этого "лабиринта" к поверхности.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Фотосфера</h3>
 							<p class="text-card__desc">
 								Видимая поверхность Солнца. Температура здесь падает до "всего"
@@ -253,14 +244,11 @@
 			<!-- Активность -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АКТИВНОСТЬ</span>
 						<h2 class="section__title">Космическая погода</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Солнце — это не спокойный шар, а бурлящий котел. Его магнитное поле
 							меняется каждые 11 лет (цикл Швабе), вызывая появление пятен, вспышек и
@@ -285,14 +273,11 @@
 			<!-- Миссии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИССЛЕДОВАНИЯ</span>
 						<h2 class="section__title">Прикоснуться к звезде</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Изучать Солнце сложно из-за жара и радиации. Однако зонд NASA
 							<strong>Parker Solar Probe</strong> совершил невозможное — он буквально
@@ -311,14 +296,11 @@
 			<!-- Затмения -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФЕНОМЕН</span>
 						<h2 class="section__title">Солнечные затмения</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Нам повезло с космическим совпадением: Солнце в 400 раз больше Луны, но
 							оно также в 400 раз дальше. Поэтому на небе их диски кажутся
@@ -336,12 +318,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Какого цвета Солнце?</summary>
 							<p>
 								На самом деле Солнце белое. Желтым оно кажется из-за рассеяния света
@@ -349,7 +331,7 @@
 								желто-красные оттенки). Из космоса оно выглядит ослепительно белым.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Когда Солнце погаснет?</summary>
 							<p>
 								Примерно через 5 миллиардов лет. Оно исчерпает водород, раздуется в
@@ -357,7 +339,7 @@
 								оболочку и станет белым карликом.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Как мы знаем состав Солнца?</summary>
 							<p>
 								С помощью спектроскопии. Каждый химический элемент поглощает свет на
@@ -373,7 +355,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
