--- a/stars/supernova.html
+++ b/stars/supernova.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Сверхновая: смерть звезды | Звёзды</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -170,7 +170,7 @@
 				<span class="breadcrumbs__current p-name">Сверхновая</span>
 			</nav>
 
-			<section class="hero" aria-label="Сверхновая">
+			<section class="hero" aria-label="Сверхновые звёзды">
 				<div
 					class="hero__bg"
 					aria-hidden="true"
@@ -183,29 +183,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #ff6b6b"
-					>
-						СВЕРХНОВАЯ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						КОСМИЧЕСКИЙ ФЕЙЕРВЕРК
-					</p>
+					<h1 class="hero__title">СВЕРХНОВАЯ</h1>
+					<p class="hero__subtitle">КОСМИЧЕСКИЙ ФЕЙЕРВЕРК</p>
 				</div>
 			</section>
 
 			<!-- Описание -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПРОЦЕСС</span>
 						<h2 class="section__title">Грандиозный финал</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Сверхновая</strong> — это не рождение новой звезды, а
 							катастрофическая смерть старой. В момент вспышки одна звезда выделяет
@@ -225,12 +215,12 @@
 			<!-- Типы -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
 						<h2 class="section__title">Типы взрывов</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
+					<div class="compare">
+						<div class="compare__col">
 							<div class="compare__head">Тип Ia</div>
 							<ul class="compare__list">
 								<li>Термоядерный взрыв белого карлика</li>
@@ -239,7 +229,7 @@
 								<li>"Стандартная свеча" для измерения расстояний</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
+						<div class="compare__col">
 							<div class="compare__head">Тип II</div>
 							<ul class="compare__list">
 								<li>Гравитационный коллапс ядра</li>
@@ -248,21 +238,18 @@
 								<li>Выброс нейтрино</li>
 							</ul>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Нуклеосинтез -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЖИЗНЬ</span>
 						<h2 class="section__title">Мы — звёздная пыль</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Водород и гелий появились во время Большого взрыва. Но откуда взялись
 							углерод в наших клетках, кальций в костях и железо в крови?
@@ -280,32 +267,32 @@
 			<!-- Остатки -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАСЛЕДИЕ</span>
 						<h2 class="section__title">Что остается после?</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Туманность</h3>
 							<p class="text-card__desc">
 								Красочное облако светящегося газа (остаток сверхновой),
 								расширяющееся в космос. Пример: Крабовидная туманность.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Нейтронная звезда</h3>
 							<p class="text-card__desc">
 								Если звезда была массивной, ее ядро сожмется в сверхплотный шар
 								диаметром 20 км — пульсар или магнетар.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Чёрная дыра</h3>
 							<p class="text-card__desc">
 								Если звезда была очень массивной (>20 масс Солнца), гравитация
 								победит всё, и ядро схлопнется в точку сингулярности.
 							</p>
-						</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -313,12 +300,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Опасны ли сверхновые для Земли?</summary>
 							<p>
 								Да, если взрыв произойдет ближе 50 световых лет. Гамма-излучение
@@ -326,7 +313,7 @@
 								на взрыв (Бетельгейзе находится в 640 световых годах).
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Как часто они взрываются?</summary>
 							<p>
 								В галактике размером с Млечный Путь сверхновая вспыхивает примерно
@@ -335,7 +322,7 @@
 								1987 году (в соседней галактике).
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Взорвется ли Солнце?</summary>
 							<p>
 								Нет. У Солнца недостаточно массы для такого финала. Оно сбросит
@@ -351,7 +338,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
