--- a/blackholes/accretion-disks.html
+++ b/blackholes/accretion-disks.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Аккреционные диски: как питаются чёрные дыры | Космос</title>
 		<meta
@@ -153,7 +153,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -188,29 +188,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #ff8c00"
-					>
-						ВОДОВОРОТ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						АККРЕЦИОННЫЕ ДИСКИ
-					</p>
+					<h1 class="hero__title">ВОДОВОРОТ</h1>
+					<p class="hero__subtitle">АККРЕЦИОННЫЕ ДИСКИ</p>
 				</div>
 			</section>
 
 			<!-- Обзор -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФИЗИКА</span>
 						<h2 class="section__title">Анатомия водоворота</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Газ и пыль, попадающие в гравитационное поле чёрной дыры, не падают на
 							неё по прямой линии. Из-за сохранения момента импульса материя
@@ -235,12 +225,12 @@
 			<!-- Типы дисков -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">КЛАССИФИКАЦИЯ</span>
 						<h2 class="section__title">Виды аккреции</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Тонкие диски</h3>
 							<p class="text-card__desc">
 								Модель Шакуры-Сюняева. Геометрически тонкие, но оптически толстые
@@ -248,14 +238,14 @@
 								квазаров.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Толстые диски</h3>
 							<p class="text-card__desc">
 								Когда темп аккреции очень низок или очень высок, диск "раздувается".
 								Такие потоки (ADAF) плохо излучают энергию, унося тепло внутрь дыры.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Сверхкритические</h3>
 							<p class="text-card__desc">
 								Когда материи падает слишком много, излучение начинает "сдувать"
@@ -270,14 +260,11 @@
 			<!-- Джеты -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АКТИВНОСТЬ</span>
 						<h2 class="section__title">Релятивистские джеты</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Не вся материя падает в чёрную дыру. Часть её выбрасывается наружу вдоль
 							оси вращения в виде узких пучков плазмы — <strong>джетов</strong>.
@@ -299,14 +286,11 @@
 			<!-- Наблюдения -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАБЛЮДЕНИЯ</span>
 						<h2 class="section__title">Увидеть невидимое</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Аккреционные диски — самые яркие постоянные источники излучения во
 							Вселенной. Мы изучаем их с помощью рентгеновских телескопов, таких как
@@ -326,12 +310,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Почему диск плоский?</summary>
 							<p>
 								Изначальное облако газа может быть любой формы, но столкновения
@@ -340,7 +324,7 @@
 								спиральные галактики.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Почему материя светится?</summary>
 							<p>
 								Гравитационная энергия падения превращается в тепловую из-за трения
@@ -348,7 +332,7 @@
 								выше температура.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Всегда ли есть диск?</summary>
 							<p>
 								Нет. Если "еды" мало, диск может быть очень тусклым или
@@ -364,7 +348,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
