--- a/blackholes/wormholes.html
+++ b/blackholes/wormholes.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Кротовые норы: туннели сквозь пространство | Чёрные дыры</title>
 		<meta
@@ -153,7 +153,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -189,29 +189,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #2ecc71"
-					>
-						ЧЕРВОТОЧИНЫ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						МОСТЫ ЭЙНШТЕЙНА-РОЗЕНА
-					</p>
+					<h1 class="hero__title">ЧЕРВОТОЧИНЫ</h1>
+					<p class="hero__subtitle">МОСТЫ ЭЙНШТЕЙНА-РОЗЕНА</p>
 				</div>
 			</section>
 
 			<!-- Теория -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ТЕОРИЯ</span>
 						<h2 class="section__title">Геометрия пространства</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В 1935 году Альберт Эйнштейн и Натан Розен, используя уравнения общей
 							теории относительности, показали существование "мостов" через
@@ -237,12 +227,12 @@
 			<!-- Проблема проходимости -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПРОБЛЕМЫ</span>
 						<h2 class="section__title">Почему мы не путешествуем?</h2>
 					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Нестабильность</h3>
 							<p class="text-card__desc">
 								Классический мост Эйнштейна-Розена нестабилен. Он схлопывается
@@ -250,7 +240,7 @@
 								горловины нужна особая сила.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Экзотическая материя</h3>
 							<p class="text-card__desc">
 								Чтобы нора оставалась открытой, нужна материя с отрицательной
@@ -258,7 +248,7 @@
 								умеем создавать её в макроскопических масштабах.
 							</p>
 						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Смертельная радиация</h3>
 							<p class="text-card__desc">
 								Даже если нора стабильна, вакуумные флуктуации и реликтовое
@@ -273,14 +263,11 @@
 			<!-- Машина времени -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПАРАДОКСЫ</span>
 						<h2 class="section__title">Петли времени</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Если взять один конец кротовой норы, разогнать его до околосветовой
 							скорости, а затем вернуть обратно, то из-за релятивистского замедления
@@ -300,12 +287,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Существуют ли кротовые норы на самом деле?</summary>
 							<p>
 								Мы не знаем. Общая теория относительности позволяет их
@@ -313,7 +300,7 @@
 								пока нет. Они остаются гипотетическими объектами.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Как отличить кротовую нору от чёрной дыры?</summary>
 							<p>
 								Внешне они очень похожи. Различие может быть в том, как свет
@@ -322,7 +309,7 @@
 								картину.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Можно ли создать кротовую нору искусственно?</summary>
 							<p>
 								Это требует технологий уровня Кардашёва II или III. Нужно уметь
@@ -338,7 +325,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
