--- a/exploration/index.html
+++ b/exploration/index.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Исследование космоса: история, миссии, будущее | Космонавтика</title>
 		<meta
@@ -147,7 +147,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -171,26 +171,19 @@
 			<section class="hero" aria-label="Исследование космоса">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						ПУТЬ К ЗВЁЗДАМ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						ИСТОРИЯ И БУДУЩЕЕ КОСМОНАВТИКИ
-					</p>
+					<h1 class="hero__title">ПУТЬ К ЗВЁЗДАМ</h1>
+					<p class="hero__subtitle">ИСТОРИЯ И БУДУЩЕЕ КОСМОНАВТИКИ</p>
 				</div>
 			</section>
 
 			<!-- Начало эры -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">НАЧАЛО ЭРЫ</span>
 						<h2 class="section__title">Первые шаги в неизведанное</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Космическая эра началась 4 октября 1957 года с запуска первого
 							искусственного спутника Земли (<strong>Спутник-1</strong>). Уже 12
@@ -217,12 +210,12 @@
 			<!-- Ключевые миссии -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЛЕГЕНДЫ</span>
 						<h2 class="section__title">Знаковые миссии</h2>
 					</div>
-					<article class="text-cards">
-						<div class="text-card animate-fade-up" style="animation-delay: 0ms">
+					<div class="text-cards">
+						<div class="text-card">
 							<h3 class="text-card__title">Аполлон (Apollo)</h3>
 							<p class="text-card__desc">
 								Программа NASA, кульминацией которой стала высадка Нила Армстронга и
@@ -230,7 +223,7 @@
 								астронавтов.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 150ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Вояджер (Voyager)</h3>
 							<p class="text-card__desc">
 								Запущенные в 1977 году зонды-близнецы посетили планеты-гиганты и
@@ -238,7 +231,7 @@
 								вышедшими в межзвёздное пространство.
 							</p>
 						</div>
-						<div class="text-card animate-fade-up" style="animation-delay: 300ms">
+						<div class="text-card">
 							<h3 class="text-card__title">Джеймс Уэбб (JWST)</h3>
 							<p class="text-card__desc">
 								<a class="text-link" href="jwst.html"
@@ -248,7 +241,7 @@
 								экзопланет в инфракрасном диапазоне.
 							</p>
 						</div>
-					</article>
+					</div>
 					<p style="margin-top: 24px; color: var(--fg-dim); max-width: 780px">
 						Подробно о миссиях читайте в статьях
 						<a class="text-link" href="apollo-11.html">Apollo 11</a>
@@ -261,21 +254,21 @@
 			<!-- Статистика -->
 			<section class="section">
 				<div class="container">
-					<article class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+					<div class="stats">
+						<div class="stat">
 							<div class="stat__value">600+</div>
 							<div class="stat__label">ЛЮДЕЙ В КОСМОСЕ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">24 млрд</div>
 							<div class="stat__label">КМ ДО ВОЯДЖЕРА-1</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">1998</div>
 							<div class="stat__label">ЗАПУСК ПЕРВОГО МОДУЛЯ МКС</div>
 						</div>
-					</article>
-					<article class="info-band animate-fade-in" style="animation-delay: 400ms">
+					</div>
+					<div class="info-band">
 						<div class="info-band__inner">
 							<span class="info-band__dot"></span>
 							<span class="info-band__text"
@@ -287,19 +280,19 @@
 							>
 							<span class="info-band__dot"></span>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Будущее -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ПЕРСПЕКТИВЫ</span>
 						<h2 class="section__title">Будущее космонавтики</h2>
 					</div>
-					<article class="compare">
-						<div class="compare__col animate-fade-up" style="animation-delay: 0ms">
+					<div class="compare">
+						<div class="compare__col">
 							<div class="compare__head">Лунная база (Artemis)</div>
 							<ul class="compare__list">
 								<li>Возвращение людей на Луну</li>
@@ -308,7 +301,7 @@
 								<li>Плацдарм для Марса</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 150ms">
+						<div class="compare__col">
 							<div class="compare__head">Колонизация Марса</div>
 							<ul class="compare__list">
 								<li>Миссии SpaceX Starship</li>
@@ -317,7 +310,7 @@
 								<li>Автономные поселения</li>
 							</ul>
 						</div>
-						<div class="compare__col animate-fade-up" style="animation-delay: 300ms">
+						<div class="compare__col">
 							<div class="compare__head">Межзвёздные зонды</div>
 							<ul class="compare__list">
 								<li>Проекты типа Breakthrough Starshot</li>
@@ -326,21 +319,18 @@
 								<li>Поиск жизни на экзопланетах</li>
 							</ul>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Факты о космонавтике -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ФАКТЫ</span>
 						<h2 class="section__title">Числа орбит и полётов</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Международная космическая станция обращается вокруг Земли на высоте
 							~<strong>420 км</strong> со скоростью <strong>7,66 км/с</strong>,
@@ -362,12 +352,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы об исследовании космоса</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Когда человек полетит на Марс?</summary>
 							<p>
 								Оптимистичные прогнозы (SpaceX) говорят о конце 2020-х годов, более
@@ -375,7 +365,7 @@
 								радиация и длительная изоляция.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Зачем нам осваивать космос?</summary>
 							<p>
 								Космонавтика даёт технологии (спутники, GPS, новые материалы),
@@ -383,7 +373,7 @@
 								стать страховкой для выживания человечества.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Есть ли кто-то ещё во Вселенной?</summary>
 							<p>
 								Пока мы не нашли подтверждённых следов внеземной жизни. Но учитывая
@@ -399,7 +389,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
