--- a/galaxies/andromeda.html
+++ b/galaxies/andromeda.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Туманность Андромеды (M31): наш гигантский сосед | Галактики</title>
 		<meta
@@ -151,7 +151,7 @@
 			<div class="container">
 				<div class="header__inner">
 					<a href="../index.html"><div class="logo">COSMOS</div></a>
-					<nav class="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="../galaxies/">ГАЛАКТИКИ</a>
@@ -163,13 +163,13 @@
 		</header>
 
 		<main>
-			<nav class="breadcrumbs h-breadcrumb">
+			<nav class="breadcrumbs h-breadcrumb" aria-label="Хлебные крошки">
 				<a class="breadcrumbs__link" href="../index.html">Главная</a>
 				<a class="breadcrumbs__link" href="../galaxies/">Галактики</a>
 				<span class="breadcrumbs__current">Андромеда</span>
 			</nav>
 
-			<section class="hero">
+			<section class="hero" aria-label="Галактика Андромеды">
 				<div
 					class="hero__bg"
 					style="
@@ -181,8 +181,8 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="color: #4a90e2">АНДРОМЕДА</h1>
-					<p class="hero__subtitle animate-fade-in">M31: ГИГАНТ ПО СОСЕДСТВУ</p>
+					<h1 class="hero__title" style="color: #4a90e2">АНДРОМЕДА</h1>
+					<p class="hero__subtitle">M31: ГИГАНТ ПО СОСЕДСТВУ</p>
 				</div>
 			</section>
 
@@ -192,18 +192,22 @@
 						<span class="section__tag">ОБЪЕКТ M31</span>
 						<h2 class="section__title">Ближайшая спиральная галактика</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							<strong>Туманность Андромеды</strong> (M31) — крупнейшая галактика
 							Местной группы, расположенная на расстоянии 2,5 миллиона световых лет от
 							Земли. Это самый далекий объект, который можно увидеть невооруженным
-							глазом.
+							глазом; для сравнения с нашей галактикой см. раздел
+							<a class="text-link" href="milky-way.html">Млечный Путь</a>.
 						</p>
 						<p>
 							В отличие от Млечного Пути, Андромеда содержит около 1 триллиона звезд —
 							в 2-3 раза больше, чем наша галактика. Однако последние данные о массе
-							темной материи показывают, что Млечный Путь может быть массивнее,
-							несмотря на меньшее количество звезд.
+							её тёмного гало и центральной чёрной дыры (подробнее о таких объектах
+							см. в разделе
+							<a class="text-link" href="../blackholes/">чёрные дыры</a>) емной
+							материи показывают, что Млечный Путь может быть массивнее, несмотря на
+							меньшее количество звезд.
 						</p>
 					</article>
 				</div>
@@ -215,7 +219,7 @@
 						<span class="section__tag">СУДЬБА</span>
 						<h2 class="section__title">Неизбежное слияние</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Андромеда движется навстречу Млечному Пути со скоростью 110 км/с.
 							Примерно через 4,5 миллиарда лет начнется грандиозный процесс слияния
@@ -265,7 +269,7 @@
 						<span class="section__tag">ИСТОРИЯ</span>
 						<h2 class="section__title">От древности до наших дней</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Первые упоминания туманности Андромеды встречаются в арабских
 							астрономических трактатах X века. Аль-Суфи описал её как "маленькое
@@ -296,7 +300,7 @@
 						<span class="section__tag">СТРУКТУРА</span>
 						<h2 class="section__title">Архитектура гиганта</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Андромеда — классическая спиральная галактика с перемычкой типа Sb. Её
 							спиральные рукава богаты молодыми горячими звёздами и областями
@@ -325,7 +329,7 @@
 						<span class="section__tag">СПУТНИКИ</span>
 						<h2 class="section__title">Семейство галактик</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Андромеда имеет не менее 14 известных галактик-спутников, самые крупные
 							из которых — M32 и M110. M32 — компактная эллиптическая галактика,
@@ -354,7 +358,7 @@
 						<span class="section__tag">НАБЛЮДЕНИЯ</span>
 						<h2 class="section__title">Как увидеть Андромеду</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Андромеда — самый далёкий объект, видимый невооружённым глазом. В тёмную
 							ясную ночь она выглядит как тусклое размытое пятно размером с Луну.
@@ -384,7 +388,7 @@
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Когда точно произойдёт столкновение с Млечным Путём?</summary>
 							<p>
 								Первое сближение начнётся через 4.5 миллиарда лет, но полное слияние
@@ -392,7 +396,7 @@
 								галактики превратятся в единую эллиптическую систему.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Можно ли будет увидеть это столкновение с Земли?</summary>
 							<p>
 								К тому времени Солнце станет красным гигантом, и Земля, вероятно,
@@ -401,7 +405,7 @@
 								зрелищем.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>
 								Почему Андромеда кажется больше Млечного Пути, хотя мы в центре?
 							</summary>
@@ -412,7 +416,7 @@
 								него.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+						<details class="faq__item">
 							<summary>Есть ли в Андромеде планеты и потенциально жизнь?</summary>
 							<p>
 								С высокой вероятностью да. При триллионе звёзд статистически должны
