--- a/galaxies/index.html
+++ b/galaxies/index.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Галактики: спиральные, эллиптические, квазары</title>
 		<meta
@@ -138,7 +138,7 @@
 					<a href="../index.html">
 						<div class="logo">COSMOS</div>
 					</a>
-					<nav class="nav" id="nav">
+					<nav class="nav" id="nav" aria-label="Основная навигация">
 						<a class="nav__link" href="../planets/">ПЛАНЕТЫ</a>
 						<a class="nav__link" href="../stars/">ЗВЕЗДЫ</a>
 						<a class="nav__link" href="./">ГАЛАКТИКИ</a>
@@ -162,26 +162,19 @@
 			<section class="hero" aria-label="Галактики">
 				<div class="hero__bg" aria-hidden="true"></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="animation-delay: 300ms">
-						ГАЛАКТИКИ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						СКОПЛЕНИЯ ЗВЕЗД ВО ВСЕЛЕННОЙ
-					</p>
+					<h1 class="hero__title">ГАЛАКТИКИ</h1>
+					<p class="hero__subtitle">СКОПЛЕНИЯ ЗВЕЗД ВО ВСЕЛЕННОЙ</p>
 				</div>
 			</section>
 
 			<!-- Дополнительный контент: описание раздела -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МЛЕЧНЫЙ ПУТЬ</span>
 						<h2 class="section__title">Млечный Путь и галактики</h2>
-					</article>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					</div>
+					<article>
 						<p style="margin-bottom: 16px">
 							Наша галактика
 							<a class="text-link" href="milky-way.html"
@@ -209,21 +202,21 @@
 			<!-- Дополнительный контент: статистика -->
 			<section class="section">
 				<div class="container">
-					<article class="stats">
-						<div class="stat animate-fade-up" style="animation-delay: 0ms">
+					<div class="stats">
+						<div class="stat">
 							<div class="stat__value">2.5 млн св. л.</div>
 							<div class="stat__label">ДО АНДРОМЕДЫ</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 150ms">
+						<div class="stat">
 							<div class="stat__value">200–400 млрд</div>
 							<div class="stat__label">ЗВЁЗД В МП</div>
 						</div>
-						<div class="stat animate-fade-up" style="animation-delay: 300ms">
+						<div class="stat">
 							<div class="stat__value">1e6+</div>
 							<div class="stat__label">СКОПЛЕНИЙ</div>
 						</div>
-					</article>
-					<article class="info-band animate-fade-in" style="animation-delay: 400ms">
+					</div>
+					<div class="info-band">
 						<div class="info-band__inner">
 							<span class="info-band__dot"></span>
 							<span class="info-band__text"
@@ -233,35 +226,35 @@
 							>
 							<span class="info-band__dot"></span>
 						</div>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Типы галактик -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">МОРФОЛОГИЯ</span>
 						<h2 class="section__title">Типы галактик</h2>
-					</article>
+					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Спиральные галактики</h3>
 							<p class="text-card__desc">
 								Имеют дисковую структуру с закрученными рукавами, где активно
 								формируются звёзды. Млечный Путь и Андромеда — примеры спиральных
 								галактик.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Эллиптические галактики</h3>
 							<p class="text-card__desc">
 								Имеют эллипсоидную форму без выраженной структуры. Состоят
 								преимущественно из старых звёзд, звездообразование практически
 								отсутствует.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Неправильные галактики</h3>
 							<p class="text-card__desc">
 								Не имеют чёткой формы, часто являются результатом гравитационных
@@ -276,14 +269,11 @@
 			<!-- Скопления галактик -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СТРУКТУРА</span>
 						<h2 class="section__title">Скопления и сверхскопления</h2>
-					</article>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					</div>
+					<div>
 						<p style="margin-bottom: 16px">
 							Галактики редко существуют изолированно. Они объединяются в
 							<strong>скопления галактик</strong>, содержащие от десятков до тысяч
@@ -301,17 +291,17 @@
 							квазаров — в материале
 							<a class="text-link" href="../stars/">звёзды: сверхновые и пульсары</a>.
 						</p>
-					</article>
+					</div>
 				</div>
 			</section>
 
 			<!-- Визуализация спиральной галактики -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ИНТЕРАКТИВ</span>
 						<h2 class="section__title">Спиральная галактика</h2>
-					</article>
+					</div>
 					<div class="galaxy-viz" id="galaxyViz">
 						<div class="galaxy-core"></div>
 						<div class="galaxy-arm" id="arm1"></div>
@@ -334,19 +324,17 @@
 			<!-- Активные галактики -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">АКТИВНОСТЬ</span>
 						<h2 class="section__title">Активные галактические ядра и квазары</h2>
-					</article>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					</div>
+					<article>
 						<p style="margin-bottom: 16px">
 							Около 10% галактик имеют активные ядра (AGN), где сверхмассивная чёрная
-							дыра активно поглощает материю. Аккреционный диск вокруг неё
-							разогревается до миллионов градусов, излучая больше энергии, чем вся
-							галактика. Пример такой системы —
+							дыра активно поглощает материю; подробнее о свойствах чёрных дыр см. в
+							разделе <a class="text-link" href="../blackholes/">чёрные дыры</a>.
+							Аккреционный диск вокруг неё разогревается до миллионов градусов,
+							излучая больше энергии, чем вся галактика. Пример такой системы —
 							<a class="text-link" href="sombrero.html">галактика Сомбреро</a>.
 						</p>
 						<p style="margin-bottom: 16px">
@@ -366,35 +354,36 @@
 			<!-- Эволюция галактик -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЭВОЛЮЦИЯ</span>
 						<h2 class="section__title">Жизненный цикл галактик</h2>
-					</article>
+					</div>
 					<div class="text-cards">
-						<article class="text-card animate-fade-up" style="animation-delay: 0ms">
+						<article class="text-card">
 							<h3 class="text-card__title">Формирование (z > 6)</h3>
 							<p class="text-card__desc">
 								Первые галактики образовались через 400 млн лет после Большого
 								взрыва из флуктуаций тёмной материи. Активное звездообразование и
-								рост чёрных дыр.
+								рост чёрных дыр; подробнее о жизненном цикле звёзд см. в разделе
+								<a class="text-link" href="../stars/">звёзды и их эволюция</a>.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 150ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Зрелость (z = 1–3)</h3>
 							<p class="text-card__desc">
 								Пик звездообразования во Вселенной. Слияния галактик формируют
 								крупные структуры. Формирование спиральных и эллиптических
 								морфологий.
 							</p>
-						</article>
-						<article class="text-card animate-fade-up" style="animation-delay: 300ms">
+						</div>
+						<article class="text-card">
 							<h3 class="text-card__title">Современность (z = 0)</h3>
 							<p class="text-card__desc">
 								Снижение темпов звездообразования. Эллиптические галактики —
 								результат древних слияний. Спиральные продолжают формировать звёзды
 								в рукавах.
 							</p>
-						</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -402,14 +391,11 @@
 			<!-- Темная материя -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ЗАГАДКИ</span>
 						<h2 class="section__title">Невидимый каркас</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Наблюдая за вращением галактик, астрономы обнаружили, что видимой
 							материи (звезд и газа) недостаточно, чтобы удержать их вместе. Скорости
@@ -429,12 +415,12 @@
 			<!-- FAQ о галактиках -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы о галактиках</h2>
-					</article>
+					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Сколько галактик во Вселенной?</summary>
 							<p>
 								По современным оценкам, наблюдаемая Вселенная содержит около 2
@@ -442,7 +428,7 @@
 								более мощных телескопов.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Столкнутся ли Млечный Путь и Андромеда?</summary>
 							<p>
 								Да, через примерно 4.5 миллиарда лет эти галактики сольются,
@@ -450,7 +436,7 @@
 								сотни миллионов лет.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Что находится в центре галактик?</summary>
 							<p>
 								В центре большинства крупных галактик находятся сверхмассивные
@@ -466,12 +452,12 @@
 			<!-- Сравнение типов галактик -->
 			<section class="section">
 				<div class="container">
-					<article class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СРАВНЕНИЕ</span>
 						<h2 class="section__title">Характеристики типов галактик</h2>
-					</article>
+					</div>
 					<div class="compare">
-						<article class="compare__col animate-fade-up" style="animation-delay: 0ms">
+						<div class="compare__col">
 							<div class="compare__head">Спиральные</div>
 							<ul class="compare__list">
 								<li>Дисковая структура с рукавами</li>
@@ -480,11 +466,8 @@
 								<li>Молодые и старые звёзды</li>
 								<li>Вращение вокруг оси</li>
 							</ul>
-						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 150ms"
-						>
+						</div>
+						<div class="compare__col">
 							<div class="compare__head">Эллиптические</div>
 							<ul class="compare__list">
 								<li>Эллипсоидная форма</li>
@@ -493,11 +476,8 @@
 								<li>Преимущественно старые звёзды</li>
 								<li>Хаотичные орбиты звёзд</li>
 							</ul>
-						</article>
-						<article
-							class="compare__col animate-fade-up"
-							style="animation-delay: 300ms"
-						>
+						</div>
+						<div class="compare__col">
 							<div class="compare__head">Неправильные</div>
 							<ul class="compare__list">
 								<li>Нет чёткой структуры</li>
@@ -506,7 +486,7 @@
 								<li>Результат взаимодействий</li>
 								<li>Небольшие размеры</li>
 							</ul>
-						</article>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -515,7 +495,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
