--- a/galaxies/milky-way.html
+++ b/galaxies/milky-way.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Млечный Путь: наш космический дом | Галактики</title>
 		<meta
@@ -172,8 +172,8 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1 class="hero__title animate-fade-in" style="color: #9b59b6">МЛЕЧНЫЙ ПУТЬ</h1>
-					<p class="hero__subtitle animate-fade-in">НАШ ЗВЁЗДНЫЙ ГОРОД</p>
+					<h1 class="hero__title" style="color: #9b59b6">МЛЕЧНЫЙ ПУТЬ</h1>
+					<p class="hero__subtitle">НАШ ЗВЁЗДНЫЙ ГОРОД</p>
 				</div>
 			</section>
 
@@ -183,13 +183,15 @@
 						<span class="section__tag">СТРУКТУРА</span>
 						<h2 class="section__title">Спиральный гигант</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							<strong>Млечный Путь</strong> относится к типу SBc — спиральные
 							галактики с перемычкой и свободно закрученными рукавами. Масса галактики
 							оценивается в 1-1.5 триллиона масс Солнца, причём около 85-90% этой
 							массы приходится на тёмную материю, которая формирует гало и
-							обеспечивает гравитационную стабильность всей структуры.
+							обеспечивает гравитационную стабильность всей структуры; сравните с
+							структурой соседней галактики в разделе
+							<a class="text-link" href="andromeda.html">Андромеда</a>.
 						</p>
 					</article>
 				</div>
@@ -235,7 +237,7 @@
 						<span class="section__tag">ЯДРО</span>
 						<h2 class="section__title">Стрелец A*</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							В самом сердце Млечного Пути скрывается сверхмассивная черная дыра
 							<strong>Стрелец A*</strong> (Sagittarius A*). Её масса превышает массу
@@ -257,7 +259,7 @@
 						<span class="section__tag">ИСТОРИЯ</span>
 						<h2 class="section__title">От мифов к науке</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Древние греки видели Млечный Путь как разлитое по небу молоко — отсюда и
 							название "галактика" (от греческого "galaktikos" — молочный). Аристотель
@@ -294,7 +296,7 @@
 						<span class="section__tag">ЭВОЛЮЦИЯ</span>
 						<h2 class="section__title">Формирование и развитие</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Млечный Путь начал формироваться примерно 13.6 миллиардов лет назад,
 							всего через 200 миллионов лет после Большого взрыва. Первые звёзды
@@ -330,7 +332,7 @@
 						<span class="section__tag">НАУЧНЫЕ СПОРЫ</span>
 						<h2 class="section__title">Открытые вопросы</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Одна из главных загадок — природа тёмной материи. Хотя она составляет
 							большую часть массы галактики, её частицы до сих пор не обнаружены.
@@ -365,7 +367,7 @@
 						<span class="section__tag">БУДУЩЕЕ</span>
 						<h2 class="section__title">Столкновение с Андромедой</h2>
 					</div>
-					<article class="animate-fade-in" style="color: var(--fg-dim)">
+					<article style="color: var(--fg-dim)">
 						<p style="margin-bottom: 16px">
 							Галактика Андромеды (M31) приближается к Млечному Пути со скоростью 110
 							км/с. Через 4.5 миллиардов лет начнётся их гравитационное
@@ -400,7 +402,7 @@
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Можно ли увидеть Млечный Путь невооружённым глазом?</summary>
 							<p>
 								Да, в тёмном месте вдали от городской засветки Млечный Путь виден
@@ -408,7 +410,7 @@
 								летние ночи в северном полушарии.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>
 								Сколько времени занимает свет от центра галактики до Земли?
 							</summary>
@@ -417,7 +419,7 @@
 								Мы видим центр галактики таким, каким он был 26 тысяч лет назад.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Поглотит ли Стрелец A* нашу Солнечную систему?</summary>
 							<p>
 								Нет, Солнечная система находится на безопасном расстоянии 26 000
@@ -425,7 +427,7 @@
 								Стрельца A* слишком мала, чтобы поглотить звёзды на таких орбитах.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 450ms">
+						<details class="faq__item">
 							<summary>Какую форму имеет Млечный Путь на самом деле?</summary>
 							<p>
 								Млечный Путь — это спиральная галактика с перемычкой. Если смотреть
