--- a/stars/betelgeuse.html
+++ b/stars/betelgeuse.html
@@ -12,7 +12,7 @@
 
 			gtag("config", "G-MQXQERKYBZ");
 		</script>
-		<meta charset="utf-8" />
+		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 		<title>Бетельгейзе: красный сверхгигант и будущая сверхновая | Космос</title>
 		<meta
@@ -188,29 +188,19 @@
 					"
 				></div>
 				<div class="container hero__container">
-					<h1
-						class="hero__title animate-fade-in"
-						style="animation-delay: 300ms; color: #ff4500"
-					>
-						БЕТЕЛЬГЕЙЗЕ
-					</h1>
-					<p class="hero__subtitle animate-fade-in" style="animation-delay: 700ms">
-						КРАСНЫЙ СВЕРХГИГАНТ
-					</p>
+					<h1 class="hero__title">БЕТЕЛЬГЕЙЗЕ</h1>
+					<p class="hero__subtitle">КРАСНЫЙ СВЕРХГИГАНТ</p>
 				</div>
 			</section>
 
 			<!-- Описание -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">ОБЗОР</span>
 						<h2 class="section__title">Плечо Ориона</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							<strong>Бетельгейзе</strong> — это альфа созвездия Орион, хотя часто
 							уступает в яркости Ригелю (бете Ориона). Это красный сверхгигант,
@@ -218,12 +208,16 @@
 						</p>
 						<p style="margin-bottom: 16px">
 							Звезда настолько огромна, что если поместить её в центр Солнечной
-							системы, её фотосфера поглотила бы Меркурий, Венеру, Землю, Марс и
-							достигла бы орбиты Юпитера. Её радиус в 764 раза больше солнечного.
+							системы, её фотосфера поглотила бы
+							<a class="text-link" href="../planets/"
+								>Меркурий, Венеру, Землю, Марс</a
+							>
+							и достигла бы орбиты Юпитера. Её радиус в 764 раза больше солнечного.
 						</p>
 						<p>
 							Расстояние до звезды оценивается примерно в 640 световых лет, что делает
-							её ближайшим к Земле кандидатом в сверхновые.
+							её ближайшим к Земле кандидатом в
+							<a class="text-link" href="supernova.html">сверхновые</a>.
 						</p>
 					</article>
 				</div>
@@ -232,14 +226,11 @@
 			<!-- Великое потемнение -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">СОБЫТИЕ</span>
 						<h2 class="section__title">Великое потемнение</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							В конце 2019 года астрономы заметили нечто странное: яркость Бетельгейзе
 							начала стремительно падать. К февралю 2020 года она достигла
@@ -259,14 +250,11 @@
 			<!-- Сверхновая -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">БУДУЩЕЕ</span>
 						<h2 class="section__title">В ожидании взрыва</h2>
 					</div>
-					<article
-						class="animate-fade-in"
-						style="animation-delay: 200ms; color: var(--fg-dim)"
-					>
+					<article>
 						<p style="margin-bottom: 16px">
 							Бетельгейзе обречена. Она уже сожгла водород в своем ядре и перешла к
 							синтезу более тяжелых элементов: гелия, углерода, неона. Когда ядро
@@ -288,12 +276,12 @@
 			<!-- FAQ -->
 			<section class="section">
 				<div class="container">
-					<div class="section__header animate-fade-down">
+					<div class="section__header">
 						<span class="section__tag">FAQ</span>
 						<h2 class="section__title">Частые вопросы</h2>
 					</div>
 					<div class="faq">
-						<details class="faq__item animate-fade-up" style="animation-delay: 0ms">
+						<details class="faq__item">
 							<summary>Опасно ли это для нас?</summary>
 							<p>
 								Нет. "Зона поражения" сверхновой составляет около 50 световых лет.
@@ -301,7 +289,7 @@
 								красивое световое шоу и поток нейтрино.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 150ms">
+						<details class="faq__item">
 							<summary>Что останется после взрыва?</summary>
 							<p>
 								Скорее всего, образуется нейтронная звезда массой около 1.5
@@ -309,7 +297,7 @@
 								(остаток сверхновой), похожая на Крабовидную туманность.
 							</p>
 						</details>
-						<details class="faq__item animate-fade-up" style="animation-delay: 300ms">
+						<details class="faq__item">
 							<summary>Как найти Бетельгейзе на небе?</summary>
 							<p>
 								Найдите три звезды Пояса Ориона. Бетельгейзе — это яркая
@@ -325,7 +313,7 @@
 		<!-- Поделиться -->
 		<section class="section">
 			<div class="container">
-				<div class="section__header animate-fade-down">
+				<div class="section__header">
 					<span class="section__tag">СОЦСЕТИ</span>
 					<h2 class="section__title">Поделиться страницей</h2>
 				</div>
